--- a/ok/gmrw/刘渡舟.md
+++ b/ok/gmrw/刘渡舟.md
@@ -52,7 +52,7 @@
 
 擅长用经方治疗疾病，是刘渡舟临床上的又一大特色。仲景之方谓之经方。他认为，仲景制方，不拘病名为何，但求脉证切当，病机合宜，有其证则用其方，故不论外感、内伤，随手拈来，因证而施治。他还认为，经方治病有两大优势，一是组方精简，配伍严密，药少量轻而功捷；二是方证结合紧密，观脉证而定病情，随证施治，不拘一格。他在临床上运用柴胡剂治疗肝胆疾病，泻心剂治疗脾胃疾病，苓桂剂治疗水气病变等，都取得很好的效果。他还从临床实践出发，结合自己多年的临床经验，师仲景之意而广仲景之法，创制了不少疗效很好的新方。如柴胡解毒汤、柴胡三石解毒汤、柴胡活络汤、柴胡鳖甲汤等治疗各种急、慢性病毒性肝炎及早期肝硬变的系列方剂，疗效显着。
 
-水气病，是中医特有的病证概念。但自仲景之后，还没有哪位医家对水气病证治疗进行过系统的论述，致使水气的概念不清，证治不明。通过长期临床观察与治疗，刘渡舟发现水气为病在临床上既常见又多发，涉及面很广，特别是冠心病、心绞痛患者，常常表现为水气病变，临床上不得其法，常难取效。因此，他刻意对水气病进行了系统的研究，发表了《试论水气上冲证治》、《谈谈人体的津液链》、《谈谈“水证”的证治》等专题学术论文。他认为：“水气”的概念，应该是既有水饮，又有寒气。其发病的机理与心、脾、肾三脏的阳气虚衰有关。心为阳中之阳，上居于胸中，能行阳令而制阴于下；脾为中土，能行津液而制水于中；肾为水脏而主宰水液的气化作用。若心、脾、肾三脏阳气虚衰，则水阴之邪无制而汪溢为害。其中，尤是以心阳虚不能降伏下阴而为二：一是由“心下”部位气往上冲，主要责之于心脾阳虚；二是由“脐下”部位气往上冲，主要责之于心肾阳虚。水气病的辨证，典型者可出现明显的气由下往上冲逆的感觉。不典的辨证，典型者可出现明显的气由下往上冲逆的感觉。不典型者，虽不见明显的气冲之感，但从下往上依次出现的或胀、或满，或悸等证也十分明显，故临床不难辨认。甚者水气上冒清阳之位，还可以出现头目眩晕，或眼、耳、鼻、舌诸窍因之不利，亦当注意。此外，色诊，脉诊对诊断水气病也很有意义。水气之色上于头面，其人面带虚浮，其色黧黑，或出现水斑（额、颊、鼻柱、口角等处，皮里肉外，出现黑斑，类似色素沉着），谓之水色；舌淡嫩而苔水滑，甚者舌面津津然欲滴，谓之水舌；脉沉而弦，谓之水脉。色脉相应，便可辨为水气病而无疑。治疗水气病，法当温阳降冲，化饮利水为主。获苓桂枝白术甘草汤是治疗水气病的基本方。方中以获苓、桂枝为主药，获苓之用有四：甘淡利水而消阴其一；宁心安神而定悸其二；行肺治节之令而通利之焦其三；补脾固堤而防水汪其四。桂枝之用有三：通阳消阴其一；下气降冲其二；补心制水其三。此方若有获苓而无桂枝，则不能化气以行津液；如有桂枝而无获苓，则不能利水以伐阳。故苓桂相辅相成，缺一不可。其余如苓桂姜甘汤、苓桂枣甘汤、苓桂杏甘汤、苓桂味甘汤等苓桂剂，皆可视作在此基础上的加减化裁。除了将经方有效的用治于水气病外，刘渡舟还创制了苓桂茜红汤、苓桂杏苡汤、苓桂龙牡汤、三参救心汤等治疗水气病的有效方剂，丰富并发展了中医治疗水气病的内容。
+水气病，是中医特有的病证概念。但自仲景之后，还没有哪位医家对水气病证治疗进行过系统的论述，致使水气的概念不清，证治不明。通过长期临床观察与治疗，刘渡舟发现水气为病在临床上既常见又多发，涉及面很广，特别是冠心病、心绞痛患者，常常表现为水气病变，临床上不得其法，常难取效。因此，他刻意对水气病进行了系统的研究，发表了《试论水气上冲证治》、《谈谈人体的津液链》、《谈谈“水证”的证治》等专题学术论文。他认为：“水气”的概念，应该是既有水饮，又有寒气。其发病的机理与心、脾、肾三脏的阳气虚衰有关。心为阳中之阳，上居于胸中，能行阳令而制阴于下；脾为中土，能行津液而制水于中；肾为水脏而主宰水液的气化作用。若心、脾、肾三脏阳气虚衰，则水阴之邪无制而汪溢为害。其中，尤是以心阳虚不能降伏下阴而为二：一是由“心下”部位气往上冲，主要责之于心脾阳虚；二是由“脐下”部位气往上冲，主要责之于心肾阳虚。水气病的辨证，典型者可出现明显的气由下往上冲逆的感觉。不典的辨证，典型者可出现明显的气由下往上冲逆的感觉。不典型者，虽不见明显的气冲之感，但从下往上依次出现的或胀、或满，或悸等证也十分明显，故临床不难辨认。甚者水气上冒清阳之位，还可以出现头目眩晕，或眼、耳、鼻、舌诸窍因之不利，亦当注意。此外，色诊，脉诊对诊断水气病也很有意义。水气之色上于头面，其人面带虚浮，其色黧黑，或出现水斑（额、颊、鼻柱、口角等处，皮里肉外，出现黑斑，类似色素沉着），谓之水色；舌淡嫩而苔水滑，甚者舌面津津然欲滴，谓之水舌；脉沉而弦，谓之水脉。色脉相应，便可辨为水气病而无疑。治疗水气病，法当温阳降冲，化饮利水为主。茯苓桂枝白术甘草汤是治疗水气病的基本方。方中以茯苓、桂枝为主药，茯苓之用有四：甘淡利水而消阴其一；宁心安神而定悸其二；行肺治节之令而通利之焦其三；补脾固堤而防水汪其四。桂枝之用有三：通阳消阴其一；下气降冲其二；补心制水其三。此方若有茯苓而无桂枝，则不能化气以行津液；如有桂枝而无茯苓，则不能利水以伐阳。故苓桂相辅相成，缺一不可。其余如苓桂姜甘汤、苓桂枣甘汤、苓桂杏甘汤、苓桂味甘汤等苓桂剂，皆可视作在此基础上的加减化裁。除了将经方有效的用治于水气病外，刘渡舟还创制了苓桂茜红汤、苓桂杏苡汤、苓桂龙牡汤、三参救心汤等治疗水气病的有效方剂，丰富并发展了中医治疗水气病的内容。
 
 ### **刘渡舟于中医教育的贡献：**
 
