--- a/ok/gl/gl03-0.1.0.0.0.md
+++ b/ok/gl/gl03-0.1.0.0.0.md
@@ -14,6 +14,6 @@
 
 经筋是十二经脉与筋肉之间的联络通路，是十二经脉在筋肉部分的延续。经筋有联缀四肢百骸，主司关节屈伸的作用。
 
-皮部是十二络脉的功能活动在体表的反映部位，又称十二皮部。
+皮部是十二经脉的功能活动在体表的反映部位，又称十二皮部。
 
 ![](img/3经络系统简表.png)
