--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -60,7 +60,7 @@
 
 津液、血由液态转化为气态物质，就成为天气的一部分。空气溶于津液、血中就成为地气的一部分。所以人体中也存在类似自然界天气、地气相交的现象。
 
-天气倾向于向外、向上，地气倾向于向内、向下，从此角度对人体进行划分的话，人体的肌表、四肢属天，五脏六腑属地；上窍属天，下窍属地；上半身属天，下半身属地；三焦中的上焦属天，中下焦属地；脏腑对比的话，腑属天，脏属地。
+人体中全身各处都有天气、地气存在，但因两者特性的不同，可以分出多种天地关系。天气倾向于向外、向上，地气倾向于向内、向下，从此角度对人体进行划分的话，人体的肌表、四肢等形体属天，五脏六腑属地；上窍属天，下窍属地；上半身属天，下半身属地；三焦中的上焦属天，中下焦属地；脏腑对比的话，腑属天，脏属地。
 
 > **阳者，天气也，主外；阴者，地气也，主内（1）。故阳道实，阴道虚（2）。**
 >
@@ -146,7 +146,7 @@
 
 #### 腠理
 
-腠理是肌表、肌肉、脏腑之间的间隙和纹理。因中医非常关注气态物质，所以腠理这种能流通气态物质的间隙对中医有重要作用。
+腠理是肌表、肌肉、脏腑之间的间隙和纹理。因中医非常关注气态物质，所以腠理这种能流通气态物质的组织间隙对中医有重要作用。
 
 > **腠者，是三焦通会元真之处，为血气所注；理者，是皮肤脏腑之文理也（4）。**...
 >
@@ -156,7 +156,7 @@
 
 ### 2、运转机制概述
 
-#### 基本原理：
+#### 2.1基本原理：
 
 人体这几大要素是如何配合形成适宜的体内环境呢？这个问题是中医的核心问题，也是学习中医的几大难点之一。
 
@@ -166,7 +166,7 @@
 
 
 
-为了容易理解，我们按照最简单的暖气的原理进行说明。假如有一个30平米的房间，在北方的冬天，房间想维持在22度左右的适宜温度。经过计算，需要一组暖气片来取暖，暖气片里的水是80公斤。然后用炉火给暖气片里的水加热。炉火用的是相当于60千瓦功率的煤气灶，，由煤气罐中的液化气做燃料。有一个控制系统用来根据室温调节炉火的大小，以保证室温不会偏差太大。
+为了容易理解，我们按照最简单的暖气的原理进行说明。假如有一个30平米的房间，在北方的冬天，房间想维持在22度左右的适宜温度。经过计算，需要一组暖气片来取暖，暖气片里的水是80公斤。然后用炉火给暖气片里的水加热。炉火用的是相当于60千瓦功率的煤气灶，由煤气罐中的液化气做燃料。有一个控制系统用来根据室温调节炉火的大小，以保证室温不会偏差太大。
 
 这个例子中有几个指标需要平衡，缺一不可。
 
@@ -181,8 +181,6 @@
 5、控制系统的控制能力要正常，在火量调节方面不能出现大的偏差。
 
 人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被水加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生。精相当于上面例子中的液化气，是人体的能源。
-
-这是人体维持体温的功能，人体器官完成其它工作所需要的能量也是由元气提供的。
 
 在中医常用术语里，粗略的讲，阴一般指阴液，包括血、津液，阳一般指元气。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
 
@@ -206,9 +204,9 @@
 
 人体内到脏腑、外到皮肉筋骨，全身各处都要求精、神、元气、天气、地气都有合适的度，才能形成适宜的体内环境，各种器官组织才能正常工作。任何地方只要有一个指标失衡就会形成疾病。只要找到失衡的指标，将其调节回正常，即可治愈疾病。
 
-#### 资源运转
+#### 2.2资源运转
 
-人体各处都需要气血，而这些资源是由饮食以及呼吸的空气转化而来，转化过程中任何一个环节出错，都会造成疾病。因此学习中医必须熟悉这些资源的产生、传递和使用方式。
+人体各处都需要气血，而这些资源是由饮食以及呼吸的空气转化而来，转化过程中任何一个环节出错，都会造成疾病。因此必须熟悉这些资源的产生、传递过程。
 
 首先，按照资源的传递过程划分，人体可以划分为两大部分：资源使用者和资源生产者
 
@@ -220,10 +218,13 @@
 
 ![](img/%E4%BA%BA%E4%BD%93%E8%B5%84%E6%BA%90%E6%B5%81%E8%BD%AC.jpg)
 
-
 饮食、空气进入脏腑处理后，产生能量和物资，供给形体，用来进行各种生命活动。这是人体资源的大致流转过程。
 
-进一步细化的话，在产生资源的脏腑环节，脏与腑的功能可以进行一个大致的区分。
+下面分别说明。
+
+##### 2.2.1、脏腑
+
+脏腑负责资源的处理与存储，其中脏与腑的功能可以进行一个大致的区分。
 
 腑主导饮食的消化，从饮食中提炼出营养物质、水分、能源等，剩余的残渣排除体外。这个过程，中医称为“化物”，类似炼油厂从石油中提炼出各种有用的物质，剩余的沥青还可以用来铺设公路。内经说“腑化物而不藏”。
 
@@ -240,7 +241,49 @@
 >
 > 《中医药学概论-藏象-五脏六腑》
 
+脏腑对比而言，腑的气态物质多，而脏的固液态物质多，所以两者之间，腑为天，脏为地。
 
+##### 2.2.2、形体
+
+形体也包括固液态物质和气态物质，也有自身的天地划分。固液态物质包括皮、肉、筋、骨、脉、髓、血、津液等等。气态物质则包括自然空气、血和水的蒸汽等等，这些气态物质用宗气、营气、卫气、脏腑之气等名词描述，详细见后面章节。
+
+在中医理论中，形体的一个重要特点就液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。
+
+另外，因液态物质与气态物质可以互相转化，所以血也是气的一个来源，称为“血为气之母”。人在意外大量失血的时候，气也跟随减少，需要补血兼补气。但通常情况下，还是以气为先。
+
+##### 2.2.3、通道
+
+脏腑与形体之间的资源交互要有通道。元气、血、津液、气态物质各有其通道。
+
+元气以三焦为通道。津液也以三焦为通道。血以脉为通道。气态物质以经络为通道。
+
+各种通道中，以经络通道为最重要，这是因为气有统帅作用，可以带动其它各种要素的通畅。
+
+##### 2.2.4、小结
+
+脏腑与形体是人体比较大的一对阴阳关系。两者比较而言，脏腑对外界进入人体的物质进行处理，转化为精气血并存储。这一过程以固液态物质为主，所以脏腑为阴，像地，以五行划分，即木、火、土、金、水；形体接受脏腑传输来的各种资源，进行使用消耗，这一过程以气态物质为主导，所以形体为阳，像天，以六气划分，也即前面天地章节所说的厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
+
+此外，脏腑和形体两者又有各自的天地之气。
+
+内在脏腑的天地之气中，地气主导天气，以固液态的形质地气为根本。而脏腑之间腑为阳，天气偏多，脏为阴，地气偏多，所以以五脏为重；
+
+外在形体的天地之气中，天气主导地气。这是因为气态物质推动津血到达全身，以营养皮肉筋骨等组织，所以以六经天气为根本。
+
+人体生病主要有外感病和内伤病。外感病是外界寒暑之气侵袭形体肌表，使其失衡并由外向内发展。内伤病是各种原因先造成脏腑失衡，并由内向外发展。
+
+通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经。因此时内在脏腑未伤，正气充足可抵抗外邪，所以以实证为多。内伤病，若伤及五脏，则较严重，产生精气血的能力下降，多成为虚证。但这只是通常的规律，不能教条化，全身各处都可以有寒热虚实的失衡情况。
+
+> 岐伯曰：阳者天气也，主外；阴者地气也，主内。故阳道实，阴道虚。故犯贼风虚邪者阳受之，食饮不节，起居不时者，阴受之。阳受之则入六腑，阴受之则入五脏。入六腑则身热不时卧，上为喘呼；入五脏则瞋满闭塞，下为飧泄，久为肠澼。
+>
+> 《素问-太阴阳明论》
+
+教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
+
+《伤寒论》既论述了人体外感风、寒之邪所形成的表病的特点和治法，也论述了病邪由表入里，表病转为里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
+
+此外，《伤寒论》主要论述寒邪伤人阳气，形成阳虚寒实格局的处理方法，虽也涉及部分阴虚热实的情况，但还不够详细。后世医家为补其不足，做温病学说，重点论述阴虚热实的辨别与处理方法，其中以吴鞠通所著的《温病条辨》为代表。
+
+由此，《伤寒论》、《金匮要略》、《温病条辨》构成了比较完善的处理各类外感、内伤杂病的中医治疗体系，再结合《黄帝内经》对人体运转机制的讲解，形成了以四大经典为主的中医理论教育体系。
 
 以上只是粗略的介绍一下人体运转的基本原理和一些基本概念，下面我们要对精、气、神、血、津液等几种资源做更详细的叙述。
 
