--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -278,7 +278,9 @@
 
 #### 2.3、脏腑之气
 
-脏腑之气是脏腑所对应的气态物质。人体的五行脏气分布是肝气左升、肺气右降，心气浮于上，肾气沉于下，脾在中间。这种分布对均衡人体上下部气血有重要作用，若出现问题，可以导致气机升降的问题，出现上实下虚或者下实上虚等分布不均的问题。
+脏腑之气是脏腑所对应的气态物质。元气通过三焦作用于各个脏腑。各个脏腑获得能量后，又可以产生脏腑之气。这个气类似前面天地章节提到的，地气对气交之地的天气产生的影响。
+
+人体的五行脏气分布是肝气左升、肺气右降，心气浮于上，肾气沉于下，脾在中间。这种分布对均衡人体上下部气血有重要作用，若出现问题，可以导致气机升降的问题，出现上实下虚或者下实上虚等分布不均的问题。
 
 > 《素问•阴阳应象大论》说：“左右者，阴阳之道路也。”左右是阴阳升降的道路，左升右降。肝主春，其气从左而升，左为肝气分布的部位。故肝病多见于左。肺主秋，其气从右而降，右为肺气分布的部位，故肺病每见于右。如《难经•五十六难》说：“肝之积名曰肥气，在左胁下……肺之积名曰息贲，在右胁下。”所以临证积见于左者，多治肝血；生于右者，多治肺气。
 >
@@ -291,6 +293,8 @@
 > **肝青心赤，脾脏色黄，肺白肾黑，五脏之常。**
 >
 > 《中医诊法-中药-方剂口诀--望诊》
+
+脏腑之气各有通道进入对应的经络，是经络之气的组成部分。比如心气注入手少阴心经，如果心气不足，则在心经通道上会出现能量不足的发冷症状，
 
 #### 2.4、五行对应
 
@@ -328,25 +332,9 @@
 | 金   | 收   | 毛（浮） |
 | 水   | 藏   | 石（沉） |
 
-## 3、天地之气与外感内伤
-
-人体有多种天地关系，从内外角度看，内在脏腑为阴像地，外在形体为阳像天，两者又有各自的天地之气。
-
-内在脏腑的天地之气中，地气主导天气。这是因为脏腑功能是将水谷地气存储转化为精气血供形体使用，所以以固液态的形质地气为根本。而脏腑之间腑为阳，天气偏多，脏为阴，地气偏多，所以以五脏五行为重；
-
-外在形体的天地之气中，天气主导地气。这是因为脏腑形成的精血在经络气态物质的推动下到达全身，以营养地气，所以营卫宗等六经气态物质组成的天气主导皮肉筋骨等地气，以天气为根本。而六经之中，阳经属阳，阴经属阴，所以以三阳经为重。
-
-通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经。因此时内在脏腑未伤，正气充足可抵抗外邪，所以以实证为多。饮食劳倦引起的内伤病，容易先伤五脏，五脏受损，产生精气血的能力下降，多成为虚证。但这只是通常的规律，不能教条化，全身各处都可以有寒热虚实的失衡情况。
-
-> 岐伯曰：阳者天气也，主外；阴者地气也，主内。故阳道实，阴道虚。故犯贼风虚邪者阳受之，食饮不节，起居不时者，阴受之。阳受之则入六腑，阴受之则入五脏。入六腑则身热不时卧，上为喘呼；入五脏则瞋满闭塞，下为飧泄，久为肠澼。
->
-> 《素问-太阴阳明论》
-
-《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
 
 
-
-## 4、总结
+## 3、总结
 
 人体的元气、天气、地气外应自然界的阳光、空气、大地。人体从能量分配角度分三阴三阳六大区域，人体的气态物质流转于相应区域的时候，就称为对应的六气。比如厥阴区域的气为风，少阴区域的气为热，太阴区域为湿，少阳区域为相火（对应暑），阳明区域为燥，太阳为寒。
 
