--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -16,6 +16,8 @@
 >
 > 《黄帝内经讲解-(十三）脉证逆从》
 
+从人的一生角度看，气血与形体都有波动性。孩童形体幼小，气血也少，但两者相比，气血多于形体。青壮年，形体长成，气血也充沛，两者配合比较合适。老年则形体衰减，气血也衰减，两者相比，气血少于形体需求。这就是人一生的形体、气血波动趋势。
+
 #### 2、阳气波动与气血之间的关系
 
 内经强调了阳气的作用，但这是在平衡范围内的作用，不要走入极端。抛弃平衡单独强调阳气是错误的。
