--- a/ok/fjx/fjx04-0.7.0.0.0.md
+++ b/ok/fjx/fjx04-0.7.0.0.0.md
@@ -6,7 +6,7 @@
 
 〔服法〕原方锉散，入粳米一撮，水二盏，煎七分，食前服（水煎服）。
 
-〔讲解〕肺属金，其色在五行相配为白，因本方能泻肺中伏火，故方名“泻白”。本方主治肺火上冲发生喘咳。因肺主气，以下行为顺；今火邪郁肺，肺失清肃，气逆而为喘咳，甚则气急。肺合皮毛，肺火郁蒸，故皮肤蒸热。肺主金，金旺于酉时，故肺中伏火，发热以日晡为甚。阴虚阳凑，逼津外出，故盗汗。舌红苔黄，脉细数，全为肺热阴伤所致。方用桑白皮甘寒入肺，清肺热泻肺气而平喘咳以为君；地骨皮甘淡而寒，入阴分泻肺中伏火以为臣，能清虚热退潮热，解五心烦热；辅桑白皮清热肃肺，泻火从小便出，使喘咳蒸热可退。佐粳米养胃“培土生金”治口渴，现临床多弃而不用。使以廿草和中缓急，既使桑、骨二皮清热之力缓留于上，又使二药泻肺之力缓行于下，且防二皮寒凉伤胃。因原方为小儿所设，针对小儿易虚易实之特点，故处方设计照顾全面，不使有伤。本方泻中寓补，对肺热气急，阴不太伤，伏火不甚者，用之最适合。诸药配用，具清泻肺热、平喘止咳之效。
+〔讲解〕肺属金，其色在五行相配为白，因本方能泻肺中伏火，故方名“泻白”。本方主治肺火上冲发生喘咳。因肺主气，以下行为顺；今火邪郁肺，肺失清肃，气逆而为喘咳，甚则气急。肺合皮毛，肺火郁蒸，故皮肤蒸热。肺主金，金旺于酉时，故肺中伏火，发热以日晡为甚。阴虚阳凑，逼津外出，故盗汗。舌红苔黄，脉细数，全为肺热阴伤所致。方用桑白皮甘寒入肺，清肺热泻肺气而平喘咳以为君；地骨皮甘淡而寒，入阴分泻肺中伏火以为臣，能清虚热退潮热，解五心烦热；辅桑白皮清热肃肺，泻火从小便出，使喘咳蒸热可退。佐粳米养胃“培土生金”治口渴，现临床多弃而不用。使以甘草和中缓急，既使桑、骨二皮清热之力缓留于上，又使二药泻肺之力缓行于下，且防二皮寒凉伤胃。因原方为小儿所设，针对小儿易虚易实之特点，故处方设计照顾全面，不使有伤。本方泻中寓补，对肺热气急，阴不太伤，伏火不甚者，用之最适合。诸药配用，具清泻肺热、平喘止咳之效。
 
 〔临证应用〕本方适用于肺热阴伤不太甚的喘咳痰粘、皮肤蒸热，盗汗、午后热甚，舌红苔黄，脉细数者。对肺气不降而致小便不利者，用之也有良效。但风寒表证喘咳忌用，不然，如油入面，将成邪结难解之劳怯，故用时宜慎。
 
