--- a/ok/bc/bc17-0.1.8.0.0.md
+++ b/ok/bc/bc17-0.1.8.0.0.md
@@ -16,4 +16,4 @@
 
 药用之甘草梢即甘草根的末梢部分或细根。主治湿热下注膀胱的茎中疼痛，如导赤散即生甘草梢与生地、木通、竹叶组成，以治小便短赤，尿道刺痛之证。
 
-【用量用法】2一10克，煎服。清火解碍宜生用，补中缓急宜炙用。传统认为本品反大戟、芫花、海藻、甘遂，古今虽也有同用之例，但仍在探讨之中，不能轻易妄用。近年来研究报道，廿草长期大剂量单独服用会引起水肿、血压升高等现象，应予以注意。
+【用量用法】2一10克，煎服。清火解碍宜生用，补中缓急宜炙用。传统认为本品反大戟、芫花、海藻、甘遂，古今虽也有同用之例，但仍在探讨之中，不能轻易妄用。近年来研究报道，甘草长期大剂量单独服用会引起水肿、血压升高等现象，应予以注意。
