--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -60,6 +60,10 @@
 
 形气互转是中医理论中非常重要的内容。在自然界有云雨的形气互转现象，这是液态水变为水蒸气升入空中，在空中受冷又变化为雨降落于地面。中医认为在人体的水液运转过程中，也有这种类似云雨的形气互转现象，中下焦（脾、胃、肾、膀胱）中的水有一部分以水蒸气的形式上升到肺，在肺化为液态，重新输送到全身。另外也有营气与血液的形气互转情况。
 
+> 阳的**化气过程**，即是把体内有形之质，化为无形之气，或转化为能量，如“**精化为气**”，“**水化为气**”等等，都依赖于阳的气化作用；阴的**成形过程**，即是把外界的物质，合成自身的形质，如精血的生成，形体的发育等等，都要依靠阴的成形作用。
+>
+> 《黄帝内经讲解-阴阳学说-（十二）阴阳的性质和作用》
+
 3、小结：
 
 以上两种气，一为质能基本单元的气，另一个是气态物质的气，这是两个范畴的概念，应该用不同的词来表示。现在两者混用确实增加了理解的难度。学习中医的人要理解不同语境下气的含义。
@@ -94,23 +98,21 @@
 
 天地是以地面为界限。比如水在地下以液态存在的时候，就算地气，一旦气化为水蒸气，离开地表，就可以算为天气的一部分。再比如土，以固态形式存在于地面就算地气，一旦被风吹到空中，成为漂浮的灰尘的时候，就算天气的一部分。反之，空气以气态的形式在空中是天气，如果其存在于土壤的缝隙之中或者溶解于液态水中，就算是地气的一部分。
 
-例子：煮菜，菜与水为浊阴，蒸腾的热气为清阳。
+例子：煮菜，菜与水为浊阴，蒸气为清阳。
 
 这里地气的理解是一个难点，很多人第一次接触这个概念的时候理解不了地气是什么。大家想象冬天的时候，大地冰封，泥土冷硬；到了春天，大地解冻，泥土开始变得潮湿。泥土由冷硬到温软的过程，或者水温由冰冷到温暖的过程，就是大地能量变强、地气变得活跃的一个现象。
 
-> 故积阳为天，积阴为地。阴静阳燥，阳生阴长，阳杀阴藏，阳化气，阴成形。
->
-> .......
+> 故积阳为天，积阴为地。阴静阳燥，阳生阴长，阳杀阴藏，阳化气，阴成形。...
 >
 > 故清阳为天，浊阴为地；
 >
 > 《素问-阴阳应象大论》
 
-> “阳”，指物质的能量。阳可以把物质转化为精微之气，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“阴”，指有形可见的物质（如精、血、津液等），它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
+> 阳可以把物质转化为**精微之气**，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“阴”，指**有形可见的物质（如精、血、津液等）**，它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
 >
 > 《黄帝内经讲解-阴阳学说-（十二）阴阳的性质和作用》
 
-> 《内经》认为天和地的相互作用，是自然界运动变化的重要原因，在天的无形之气与在地的有形之质相互交感，相互作用，于是化生万物。因此，天地是化生万物的物质基础，是生命的起源。
+> 《内经》认为天和地的相互作用，是自然界运动变化的重要原因，在**天的无形之气**与在**地的有形之质**相互交感，相互作用，于是化生万物。因此，天地是化生万物的物质基础，是生命的起源。
 >
 > 《黄帝内经讲解-五行学说-（三）天地形气的相互关系及其作用》
 
@@ -214,7 +216,37 @@
 >
 > 《黄帝内经讲解-阴阳学说-（十六）阳气的重要性》
 
-#### 2.1.2四季与昼夜将能量进行均衡分配
+#### 2.1.2三阴三阳
+
+地球绕太阳一周为一年，此周期内，**太阳阳气与地球阴气互有进退**，形成波动。根据阴阳比例的不同，分为三阴三阳六个阶段。（六个阶段的具体时间，内经没有给出说明）
+
+一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。
+
+这就相当于我们烧水的时候，柴火的大小变化，火大为阳，火小为阴。
+
+> 三阴三阳是四时、昼夜阴阳消长变化的自然规律，它根据不同的时空条件，把阴和阳各自一分为三。
+>
+> 即一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。
+>
+> ....可见三阴三阳在定位方面，有上下左右之分，在定性方面，有阴阳盛衰之分，在定量方面，有太、少、厥、阳明之分。并接着指明：“此谓气之标，南面而待也。故曰：因天之序，盛衰之时，移光定位，正立而待之，此之谓也。”....而这些变化的测定，是在日当中午的时分，**观察日影投射在圭表（古代测量日影长度数值的天文仪器）的长度数值**测知的。如冬至节日影最长，夏至节日影最短，春分、秋分日影长短相等等。.....故《生气通天论》曰：‘天运当以日光明。’正此移光定位之义。”这说明三阴三阳的划分，依据的是天文学的六气变化规律。
+>
+> 《黄帝内经讲解-阴阳学说-（五）三阴三阳的划分》
+
+> **阴阳之气各有多少，故曰三阴三阳也。**
+>
+> 《素问·天元纪大论》
+
+> 因此，三阴三阳的运转总是按一阳（少阳）→二阳（阳明）→三阳（太阳）→一阴（厥阴）→二阴（少阴）→三阴（太阴）→一阳（少阳）这样的次序进行，如此周而复始，如环无端。它们在一年之中各有一定位置，按照一定规律进行运转。这也就是原文所谓的：“上下有位，左右有纪。
+>
+> 《黄帝内经讲解-三阴三阳配六气及标本中气之间的关系》
+
+`大家注意这个三阴三阳的次序，厥阴、少阴、太阴、少阳、阳明、太阳。`
+
+`伤寒论是按照这个相反的顺序写成的，太阳篇、阳明篇、少阳篇、太阴篇、少阴篇、厥阴篇。`
+
+`可见伤寒论是论述寒邪侵袭人体，由外而内的过程。`
+
+#### 2.1.3四季与昼夜将能量进行均衡分配
 
 在地球获得的太阳能量总量均衡的前提下，能量在地表不同部位的的分布也要尽量均衡，避免出现某处获得的能量过多，而其他地方获得能量太少的情况。
 
@@ -247,44 +279,6 @@
 > 昼夜阴阳消长与人体的关系，无论在生理活动或病理变化方面，都有比较明显的反映。....继《内经》之后，仲景早已把这一理论运用于临床，提出了六经病欲解的具体时间，这对于把握病理机转，大有禆益。....仲景云：少阴之病欲解时，以子至寅，乘此阳道方亨之时而投之，药易以入，故仲景《伤寒论》中，逐时分治，不可不考。”
 >
 > 《黄帝内经讲解-人与自然-(六）人体与昼夜阴阳相应》
-
-
-
-#### 2.1.3三阴三阳
-
-虽然四季与昼夜将能量进行尽可能的均匀分配，但是依然做不到完全的平均。所以同一地点在不同时间获得的能量是波动的。同一时间，不同地点获得的能量是有差异的。第一章“阴阳平衡-高级内容-空间与时间上的指标变化”部分提到，**阴阳从时间角度看就是波动，空间角度看就是差异**。
-
-在一年四季的机制下，任一地点的**太阳阳气与地球阴气互有进退**，形成波动，在不同时间段形成不同的阴阳比例。根据阴阳比例的不同，把一年划分为六个阶段，称为三阴三阳。（六个阶段的具体时间，内经没有给出说明）
-
-一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。
-
-昼夜也是类似的情况，不同的时间段阴阳比例不同。
-
-举例：烧水时柴火多少的情况
-
-> 三阴三阳是四时、昼夜阴阳消长变化的自然规律，它根据不同的时空条件，把阴和阳各自一分为三。
->
-> 即一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。
->
-> ....可见三阴三阳在定位方面，有上下左右之分，在定性方面，有阴阳盛衰之分，在定量方面，有太、少、厥、阳明之分。并接着指明：“此谓气之标，南面而待也。故曰：因天之序，盛衰之时，移光定位，正立而待之，此之谓也。”....而这些变化的测定，是在日当中午的时分，**观察日影投射在圭表（古代测量日影长度数值的天文仪器）的长度数值**测知的。如冬至节日影最长，夏至节日影最短，春分、秋分日影长短相等等。.....故《生气通天论》曰：‘天运当以日光明。’正此移光定位之义。”这说明三阴三阳的划分，依据的是天文学的六气变化规律。
->
-> 《黄帝内经讲解-阴阳学说-（五）三阴三阳的划分》
-
-> **阴阳之气各有多少，故曰三阴三阳也。**
->
-> 《素问·天元纪大论》
-
-> 因此，三阴三阳的运转总是按一阳（少阳）→二阳（阳明）→三阳（太阳）→一阴（厥阴）→二阴（少阴）→三阴（太阴）→一阳（少阳）这样的次序进行，如此周而复始，如环无端。它们在一年之中各有一定位置，按照一定规律进行运转。这也就是原文所谓的：“上下有位，左右有纪。
->
-> 《黄帝内经讲解-三阴三阳配六气及标本中气之间的关系》
-
-`大家注意这个三阴三阳的次序，厥阴、少阴、太阴、少阳、阳明、太阳。`
-
-`伤寒论是按照这个相反的顺序写成的，太阳篇、阳明篇、少阳篇、太阴篇、少阴篇、厥阴篇。`
-
-`可见伤寒论是论述寒邪侵袭人体，由外而内的过程。`
-
-
 
 
 
@@ -423,8 +417,6 @@
 现代地理课讲解的大气受热过程提到，阳光的能量只有一半能到达地面之前，另一半被大气吸收和反射了。对照前面的五运六气可以发现，大气吸收的的太阳能量为六气，大地吸收的太阳能量为五运。
 
 气交之处的能量就是由六气和五运共同作用来决定的。用现代的语言就是对流层的温度由大气吸收的太阳短波辐射和地面发射的长波辐射共同起作用。这些属于现代地理和物理的基本知识，不了解的可以查找一下相关资料。所以，自然界的气候与热辐射关系紧密，涉及到不同波长的能量波。从天人合一的理念看，人体也应该有这类道理。近些年，有中医从人体热像和波长、频率的角度研究中医诊断和治疗方法，是有其理论基础的。
-
-当然现代的研究还没有确认天气为什么六分和地气为什么五分，这个可能要等待进一步的科学研究证据。
 
 ##### 天气、地气的能量失衡
 
@@ -703,7 +695,7 @@
 
 #### 5.6 六气与三阴三阳的对应问题：
 
-五运木火土金水和六气风热暑湿燥寒是天气、地气按照一年周期的能量波动来分配的，比较规律。但是三阴三阳和运气的对应关系却不规律，厥阴对风木，少阳对热（相火），少阴对暑（君火），太阴对湿土，阳明对燥金，太阳对寒水。这个问题是个非常大的难点，中医至今也没有特别公认的合理解释。
+五运木火土金水和六气风热暑湿燥寒是天气、地气在某一地点按照一年周期的能量波动来划分的，比较规律。但是三阴三阳和运气的对应关系却不规律，厥阴对风木，少阳对热（相火），少阴对暑（君火），太阴对湿土，阳明对燥金，太阳对寒水。这个问题是个非常大的难点，中医至今也没有特别公认的合理解释。
 
 内经明确说过三阴三阳是根据阴阳之气各有多少而划分的。以三阳中的太阳为例，其阳气应该是偏多的，为什么会对应冬季的寒水呢？
 
@@ -711,13 +703,13 @@
 
 随便说一种可能性，如果我们把这里的阳理解为太阳发射到地球的热量，把阴理解为地球整体的阴气的话，两者之间的比例是随着太阳与地球的距离变化而变化。在年周期内，我们北半球的冬天的时候，日地距离其实是更近的，也就是地球整体获得的阳气是偏高的，北半球之所以是冬天是因为其分到的热量少，更多的热量分配到了南半球。
 
-天体的运动非常复杂。一个简单的起伏波动是很好理解的，但如果多个波动叠加在一起，理解难度迅速增加。内经说，天之道像浮云一样变幻莫测。
+天体的运动非常复杂。一个简单的起伏波动很好理解，但如果多个波动叠加在一起，理解难度迅速增加。这就像复杂的数学计算缺少一些重要条件，则结论就无法推演。内经说，天之道像浮云一样变幻莫测。
 
 > 黄帝问曰：呜呼，远哉！天之道也，如迎浮云，若视深渊尚可测，迎浮云莫知其极。夫子数言谨奉天道，余闻而藏之，心私异之，不知其所谓也？愿夫子溢志尽言其事，令终不灭，久而不绝，天之道，可得闻乎？
 >
 > 《素问-六微旨大论》
 
-前述三阴三阳按照一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。这个顺序是一定的，但是其是否叠加其它要素还不得而知。因此在三阴三阳与六气的对应上并不规律，目前只能作为一个结论来记住：厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
+前述一年三阴三阳按照一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。这个顺序是一定的，但是其是否叠加其它要素还不得而知，中间应该缺失了某些条件。因此在三阴三阳与六气的对应上并不规律，目前只能作为一个结论来记住：厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
 
 教材对此只说三阴三阳是一个标识，来标示六气，并未过多解释。
 
