--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -68,13 +68,13 @@
 
 这里的属天指的是相对而言，气态物质的比例高一些或者作用强一些。属地则相反。这种方式定义的几种天地，相互之间都有类似自然界气交之地的交互形式，包括物质交互和能量交互等。比如脏腑之间，腑包括胃、大小肠、胆、膀胱等，都是空腔器官，属天，里面有较多气态物质；脏包括肝、心、脾、肺、肾，为实体器官，属地，相对而言气态物质比较少，固液态物质比较多。脏腑之间互为表里，有频繁的物质或能量的交互。
 
-一般我们谈气的时候，如果不特殊说明，指的是气态物质。
+一般我们谈气这个名词，如果不特殊说明，指的是气态物质，也就是天气。在中医中，气态物质的作用非常大，其范畴远远超出现代医学研究的范畴。气虚就是气态物质不足，会影响人的很多功能。
 
 > 黄帝曰：余闻天为阳，地为阴，日为阳，月为阴，其合之于人，奈何？岐伯曰：***腰以上为天*，腰以下为地**，
 >
 > 《黄帝内经-灵枢-阴阳系日月第四十一》
 
-> 夫言人之阴阳，则外为阳，内为阴。言人身之阴阳，则背为阳，腹为阴。言人身之藏府中阴阳，则藏者为阴，府者为阳。肝心脾肺肾五藏皆为阴，胆、胃、大肠、小肠、膀胱、三焦六府皆为阳（1）。所以欲知阴中之阴，阳中之阳者何也？为冬病在阴，夏病在阳，春病在阴，秋病在阳，皆视其所在，为施针石也（2）。故背为阳，阳中之阳，心也；背为阳，阳中之阴，肺也；腹为阴，阴中之阴，肾也；腹为阴，阴中之阳，肝也；腹为阴，阴中之至阴，脾也（3）。此皆阴阳表里内外雌雄相输应也，故以**应天之阴阳也**（4）。
+> 夫言人之阴阳，则**外为阳，内为阴**。言人身之阴阳，则背为阳，腹为阴。言人身之藏府中阴阳，则藏者为阴，府者为阳。肝心脾肺肾五藏皆为阴，胆、胃、大肠、小肠、膀胱、三焦六府皆为阳（1）。所以欲知阴中之阴，阳中之阳者何也？为冬病在阴，夏病在阳，春病在阴，秋病在阳，皆视其所在，为施针石也（2）。故背为阳，阳中之阳，心也；背为阳，阳中之阴，肺也；腹为阴，阴中之阴，肾也；腹为阴，阴中之阳，肝也；腹为阴，阴中之至阴，脾也（3）。**此皆阴阳表里内外雌雄相输应**也，故以**应天之阴阳也**（4）。
 >
 > 《素问·金匮真言论》
 
@@ -82,9 +82,9 @@
 >
 > 《素问·阴阳应象大论》
 
-> 岐伯对曰：脑、髓、骨、脉、胆、女子胞，此六者，地气之所生也。皆脏于阴而象于地，故藏而不泻，名曰奇恒之府。
+> 岐伯对曰：脑、髓、骨、脉、胆、女子胞，此六者，**地气之所生也。皆脏于阴而象于地，故藏而不泻**，名曰奇恒之府。
 >
-> 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，**其气象天**，故泻而不藏。此受五藏浊气，名曰传化之府，此不能久留，输泻者也。
+> 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，**其气象天**，故泻而不藏。此**受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
 >
 > 《素问•五藏别论篇第十一》
 
@@ -99,6 +99,10 @@
 > 饮入于胃，**游溢精气，上输于脾**（1），**脾气散精，上归于肺**，通调水道，下输膀胱。水精四布，五经并行（2）。合于四时五藏阴阳，揆度以为常也(3)。
 >
 > 《素问•经脉别论》
+
+> 阳的**化气过程**，即是把体内有形之质，化为无形之气，或转化为能量，如“**精化为气**”，“**水化为气**”等等，都依赖于阳的气化作用；阴的**成形过程**，即是把外界的物质，合成自身的形质，如精血的生成，形体的发育等等，都要依靠阴的成形作用。
+>
+> 《黄帝内经讲解-阴阳学说-（十二）阴阳的性质和作用》
 
 #### 精：
 
@@ -247,7 +251,7 @@
 
 形体也包括固液态物质和气态物质，也有自身的天地划分。固液态物质包括皮、肉、筋、骨、脉、髓、血、津液等等。气态物质则包括自然空气、血和水的蒸汽等等，这些气态物质用宗气、营气、卫气、脏腑之气等名词描述，详细见后面章节。
 
-在中医理论中，形体的一个重要特点就液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。
+在中医理论中，形体的一个重要特点就是液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。而慢性疾病往往是以气的失常为先导，逐渐波及液态的津液和血，再延伸至固态的形体组织。
 
 另外，因液态物质与气态物质可以互相转化，所以血也是气的一个来源，称为“血为气之母”。人在意外大量失血的时候，气也跟随减少，需要补血兼补气。但通常情况下，还是以气为先。
 
@@ -271,13 +275,15 @@
 
 人体生病主要有外感病和内伤病。外感病是外界寒暑之气侵袭形体肌表，使其失衡并由外向内发展。内伤病是各种原因先造成脏腑失衡，并由内向外发展。
 
-通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经。因此时内在脏腑未伤，正气充足可抵抗外邪，所以以实证为多。内伤病，若伤及五脏，则较严重，产生精气血的能力下降，多成为虚证。但这只是通常的规律，不能教条化，全身各处都可以有寒热虚实的失衡情况。
+通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经，再传于阴脏。外感初起时内在脏腑未伤，正气充足可抵抗外邪，所以以正邪相争的实证为多。内伤病，若伤及五脏，则较严重，产生精气血的能力下降，多成为虚证。但这只是通常的规律，不能教条化，全身各处都可以有寒热虚实的失衡情况。
 
 > 岐伯曰：阳者天气也，主外；阴者地气也，主内。故阳道实，阴道虚。故犯贼风虚邪者阳受之，食饮不节，起居不时者，阴受之。阳受之则入六腑，阴受之则入五脏。入六腑则身热不时卧，上为喘呼；入五脏则瞋满闭塞，下为飧泄，久为肠澼。
 >
 > 《素问-太阴阳明论》
 
-教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
+若人先有脏腑疾病，本身正气已不足，此时若再有外感侵袭，则极易由外而入里，形成严重问题。若伤及五脏，严重的话会有性命之忧。因此，人在平时就要保养脏腑，培养正气，以备特殊情况下能有足够的力量抵御各种异常侵袭。
+
+光明教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以五脏为主，用“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
 
 《伤寒论》既论述了人体外感风、寒之邪所形成的表病的特点和治法，也论述了病邪由表入里，表病转为里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
 
