--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -106,6 +106,8 @@
 
 人体部位的划分非常重要，各个部位都可以视为一个单元，都可以有各自的寒热虚实病变，进而影响到相关功能。按照哪种方法划分要视情况而定，通常来说，三阴三阳六经辨证是一种主要的部位划分方法，但也视情况会使用到其它部位划分方法，比如三焦划分、脏腑形体划分等等。
 
+后面《概论》的辩证章节，要学习各种辩证方法，比如八纲辩证、六经辩证、脏腑辩证、气血津液辩证等等，基本上就是从不同角度对人体进行部位划分后产生的，各有特点，适用于不同的情况。
+
 ## 2、疾病的轻重转化
 
 关于疾病的轻重转化值得大家重视，通过几大要素的具体分析，我们知道脏最重要、腑其次，而筋脉皮肉再次。但是这里有一个很现实的问题：很多时候腑病或者皮肉筋骨病的症状表现比脏病剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化的时候，病人会觉得更不舒服。这种情况是比较考验医生的定力和技术的，如果不懂原理，处理不当，会重新由腑病返回脏病，功亏一篑。
@@ -137,6 +139,8 @@
 西医的很多治疗方法是调节血液指标，缺钾补钾，缺钠补钠，尽量满足血液指标的平衡。中医会从四诊的角度评估西医治疗的优劣。西医治疗后，若从四诊上看有好转，中医可能会认同，若四诊判断没有好转，甚至加重，中医则反对。
 
 由此可见，在理解人体运转框架的基础上，中医的四诊非常重要，如果四诊不熟，则对疾病的病位深浅、虚实性质、程度轻重、变化进退没有依据，不是合格的中医。
+
+总体来说，从中医角度看待西医疗法，大多属于治标之法。这里并不是说治标方法无用，“急则治其标，缓则治其本”，遇到紧急情况，用治标之法先缓解状况，然后再慢慢图本是可以的。如果中医学的好，就会明白，方法手段只是工具而已，中医理论才是根本，在中医理论指导下，西医的方法未必不可以成为中医的工具，只看能否将其用在合适的位置。
 
 ## 题目
 
