--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -140,7 +140,7 @@
 
 由此可见，在理解人体运转框架的基础上，中医的四诊非常重要，如果四诊不熟，则对疾病的病位深浅、虚实性质、程度轻重、变化进退没有依据，不是合格的中医。
 
-总体来说，从中医角度看待西医疗法，大多属于治标之法。这里并不是说治标方法无用，“急则治其标，缓则治其本”，遇到紧急情况，用治标之法先缓解状况，然后再慢慢图本是可以的。如果中医学的好，就会明白，方法手段只是工具而已，中医理论才是根本，在中医理论指导下，西医的方法未必不可以成为中医的工具，只看能否将其用在合适的位置。
+总体来说，从中医角度看待西医疗法，大多属于治标之法。治标方法并非无用，“急则治其标，缓则治其本”，遇到紧急情况，用治标之法先缓解状况，然后再慢慢图本是可以的。如果中医学的好，就会明白，方法手段只是工具而已，中医理论才是根本，在中医理论指导下，西医的方法未必不可以成为中医的工具，只看能否将其用在合适的位置。
 
 ## 题目
 
