--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -18,7 +18,7 @@
 
 3、气血与精：
 
-人体气血来自脏腑之精气。后天之精配合先天之精，共同转化产生气血，再通过经络、血脉、三焦传输到全身供形体使用。前述气血为形体之本，而精则为气血之本。气血为精所化，精亡则人亡。
+人体气血来自脏腑之精气。后天之精配合先天之精，共同转化产生气血，再通过经络、血脉、三焦传输到全身供脏腑、形体使用。前述气血为形体之本，而精则为气血之本。气血为精所化，精不足，则人气血阴阳皆虚，精亡则人亡。
 
 后天之精主要来自脾胃，因此人无胃气则亡。先天之精主要存于肾，若耗尽，人亦亡。因此脾胃被称为后天之本，肾被称为先天之本。
 
@@ -37,6 +37,8 @@
 > **胃者，五藏六腑之海也，水谷皆入于胃，五藏六腑皆禀气于胃（1）。五味各走其所喜，谷味酸，先走肝；谷味苦，先走心；谷味甘，先走脾；谷味辛，先走肺；谷味咸，先走肾（2）。**
 >
 > 《灵枢·五味》
+
+以《金匮要略》中的肺痿病为例，肺痿从原理上来说，是肺中津液极为虚少，形成肺部阴虚燥热的证型，这种情况的表现是咳嗽、时不时的吐出涎沫稠痰，或者吐出不腥臭的脓血，脉虚数。造成津液虚少的原因要从补充与消耗两个角度考虑，如果是消耗过多，比如有大汗、小便过多、泻下过多等情况，则可造成肺中津液消耗过多。这种情况，用麦门冬汤直接补充肺部津液即可。但若没有过度消耗的情况，也出现了肺部阴虚，则要从补充的角度考虑。肺部的津、血、阳气需要先后天之精的补充，若脾胃不足或者肾精不足，也可造成肺部的阴虚或者阳虚。此时用麦门冬汤可能就效果不显著，需要从健脾胃和补益肾精的角度考虑。
 
 4、外界资源的吸收
 
