--- a/ok/gl/gl05-0.1.8.0.0.md
+++ b/ok/gl/gl05-0.1.8.0.0.md
@@ -12,6 +12,6 @@
 
 白㾦是一种大如栗粒，高出皮肤，透明的小泡疹。多出现于颈项及胸部，偶见于四肢，惟不见于面部。多因湿郁肌表，汗出不彻所致。其中，晶莹饱满者为顺；枯白无泽，浆水不饱满者为逆。顺者，为湿邪外达；逆者，为津液枯竭。
 
-#### （三）痈疸疔疖
+#### （三）痈疽疔疖
 
 痈疽疔疖，属于外科病证。痈：范围较大，红肿热痛，根盘明显者为痈，属阳证。疽：漫肿无头，部位较深，常不高出皮肤，局部肤色不变者为疽，属阴证。疔：发病范围小，初起如粟粒大小，根脚坚硬，或麻或木或痒，顶部白色而痛者为疔。疖：发于浅表，形圆，红肿热痛，化脓即软，为疖。
