--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -253,6 +253,10 @@
 
 在中医理论中，形体的一个重要特点就是液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。而慢性疾病往往是以气的失常为先导，逐渐波及液态的津液和血，再延伸至固态的形体组织。
 
+> “故治病以理气为先，而用药以通络为主。盖人之经络不通，则转输不捷，药不能尽其功。
+>
+> 韦协梦《医论三十篇》
+
 另外，因液态物质与气态物质可以互相转化，所以血也是气的一个来源，称为“血为气之母”。人在意外大量失血的时候，气也跟随减少，需要补血兼补气。但通常情况下，还是以气为先。
 
 ##### 2.2.3、通道
