--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -14,7 +14,15 @@
 >
 > 《素问·生气通天论》
 
-人体的元气有很多别称，比如原气、真气等。名词“阳气”，别称“真阳、真火”，这个词有时和“元气”是通用的，有时则是指被人体中被加热后的气态物质。
+人体的元气有很多别称，比如原气、真气等。
+
+> 元气，又称“原气”、“真气”。是人体诸气中最基本，最重要的气，是人体生命活动的原动力。...元气具有激发和推动脏腑组织功能活动的作用。因而，元气充沛，则脏腑功能旺盛，身体就强健而少病；若元气不足，则脏腑功能低下，身体虚弱而多病。
+>
+> 《中医药学概论-藏象-气》
+
+名词“阳气”，别称“真阳、真火”，这个词有时和“元气”是通用的，有时则是指被人体中被加热后的气态物质。
+
+> 经络协调阴阳，如经络中的**阳气（包括卫气、原气）**不足，就会出现局部发凉或全身畏寒的症状，即所谓阳虚则寒。
 
 元气提供能量供人体维持正常的体温，以及让各个脏腑组织能够进行正常的生命活动。人体失去元气，就进入死亡状态。
 
@@ -31,10 +39,6 @@
 > 阳气为生命之本，是人体生理机能和代谢活动的动力。因此，无论局部或整体的阳气不足，都会相应地出现生理机能、代谢活动障碍或衰退的病变，如张景岳在《真阴论》指出：“如火亏于下，则阳衰于上，或为神气之昏沉，或为动履之困倦。
 >
 > 《黄帝内经讲解-阴阳五行学说-阳气的重要性》
-
-> 元气，又称“原气”、“真气”。是人体诸气中最基本，最重要的气，是人体生命活动的原动力。...元气具有激发和推动脏腑组织功能活动的作用。因而，元气充沛，则脏腑功能旺盛，身体就强健而少病；若元气不足，则脏腑功能低下，身体虚弱而多病。
->
-> 《中医药学概论-藏象-气》
 
 元气与人体的固液气态物质形成一对平衡关系，元气既不能过多也不能过少，应在一个合理范围内波动。
 
@@ -82,7 +86,7 @@
 >
 > 《素问.平人气象论》
 
-元气作用于脏腑、经络，产生脏腑之气和经络之气。脏腑经络的气态物质和液态物质在获得元气的能量后，在全身流转，能带动能量到达全身。所以说元气与谷气并而充身。
+元气作用于脏腑、经络，产生脏腑之气和经络之气。脏腑经络的气态物质在获得元气的能量后，在全身流转，能带动能量到达全身。所以说元气与谷气并而充身。
 
 > **真气者，所受于天，与谷气并而充身也。**
 >
