--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -206,6 +206,8 @@
 
 营卫之气行于经络，由此可见，经络应为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
 
+
+
 营卫二气互相配合，营气负责营养，卫气负责温煦与护卫。两者配合不协调，则发生营卫不和的疾病。例如《伤寒论》的太阳中风证，为太阳区域受风邪侵袭，造成卫强而营弱的情况，表现为头痛、发热、汗出、怕风，用桂枝汤调和营卫治疗。
 
 营卫之气来自水谷之气。水谷本为固液态，在脏腑元气的作用下成为津血，进而化为气态的营卫。这种固液态与气态的相互转化，体现了阴阳互根互用的原理，与自然界太阳照射海水，蒸汽升而为云的现象很相似。
@@ -294,7 +296,7 @@
 >
 > 《中医诊法-中药-方剂口诀--望诊》
 
-脏腑之气各有通道进入对应的经络，是经络之气的组成部分。比如心气注入手少阴心经，如果心气不足，则在心经通道上会出现能量不足的发冷症状，
+脏腑之气各有通道进入对应的经络，是经络之气的组成部分。比如心气注入手少阴心经，如果心气不足，则在心经通道上会出现能量不足的发冷症状，其它脏腑类似。
 
 #### 2.4、五行对应
 
@@ -332,7 +334,7 @@
 | 金   | 收   | 毛（浮） |
 | 水   | 藏   | 石（沉） |
 
-
+这种对应关系对中医辩识病症有很重要的作用。因为中医不能直接观测到脏腑的平衡状态，所以采用观察相关的外在表现来推知脏腑状态，通过五味、五色、五音、五脉等的异常来判断脏腑异常，这就是中医望、闻、问、切四诊的由来。
 
 ## 3、总结
 
@@ -345,6 +347,10 @@
 天气与地气对应，风对木，热暑对火，湿对土，燥对金，寒对水，所以用厥阴风木、少阳相火、少阴君火、阳明燥金、太阳寒水的名词来表示六大区域。
 
 总的来说，在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
+
+> 六腑者，所以受**水谷**而行化物者也。水谷入胃，脾气消磨，渣滓下传，精微上奉，化为**雾气**，归之于肺，肺司气而主皮毛，将此**雾气，由脏而经，由经而络，由络而播宣皮腠，熏肤充身泽毛，是谓六经之气。雾气降洒，化而为水，津液精血**于是生焉。阴性亲内，自皮而络，自络而经，自经而归趋脏腑。
+>
+> 黄元御《素灵微蕴》
 
 
 
