--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -265,7 +265,7 @@
 
 元气以三焦为通道。津液也以三焦为通道。血以脉为通道。气态物质以经络为通道。
 
-各种通道中，以经络通道为最重要，这是因为气有统帅作用，可以带动其它各种要素的通畅。
+各种通道中，以经络通道为最重要，这是因为经络中运行的气态物质有统帅作用，可以带动其它各种要素的通畅。所以广义的经络系统包含了前面的三焦、血脉等通道。
 
 ##### 2.2.4、小结
 
