--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -38,8 +38,6 @@
 >
 > 《灵枢·五味》
 
-以《金匮要略》中的肺痿病为例，肺痿从原理上来说，是肺中津液极为虚少，形成肺部阴虚燥热的证型，这种情况的表现是咳嗽、时不时的吐出涎沫稠痰，或者吐出不腥臭的脓血，脉虚数。造成津液虚少的原因要从补充与消耗两个角度考虑，如果是消耗过多，比如有大汗、小便过多、泻下过多等情况，则可造成肺中津液消耗过多。这种情况，用麦门冬汤直接补充肺部津液即可。但若没有过度消耗的情况，也出现了肺部阴虚，则要从补充的角度考虑。肺部的津、血、阳气需要先后天之精的补充，若脾胃不足或者肾精不足，也可造成肺部的阴虚或者阳虚。此时用麦门冬汤可能就效果不显著，需要从健脾胃和补益肾精的角度考虑。
-
 4、外界资源的吸收
 
 人体的形、气血与五脏所藏的后天之精皆来自对自然界天气、地气的吸收，所以呼吸与饮食都很重要。
@@ -135,7 +133,13 @@
 >
 > 《伤寒论讲解-40条》
 
+### 3、整体观：
 
+几大指标的失衡就是中医的证，经过前面的讲解大家应该已经清晰了，一般情况下，阴虚补阴、阳虚补阳、有饮去饮、有痰去痰，对证治疗就可以。
+
+但是中医更有难度的地方在整体观。因人体的脏腑、精神、经络、形体各司其职，互为因果。有时出现病证的地方不一定是根源所在。而如果没有找到病的根源，则治疗效果可能不明显。寻找疾病的根源则必须熟悉中医的理论，了解人体的运转机制。
+
+以《金匮要略》中的肺痿病为例，肺痿从原理上来说，是肺中津液极为虚少，形成肺部阴虚燥热的证型，这种情况的表现是咳嗽，时不时的吐出涎沫稠痰，或者吐出不腥臭的脓血，脉虚数等。遇到此情况，我们要考虑肺部津液虚少的原因，如果是消耗过多，比如大汗、小便过多、泻下过多等原因，用麦门冬汤直接补充肺部津液即可。但若没有过度消耗的情况，也出现了肺部阴虚，则要从补充的角度考虑。肺部的津、血、阳气需要先后天之精的补充，若脾胃不足或者肾精不足，也可造成肺部的阴虚或者阳虚。此时用麦门冬汤可能就效果不显著，需要从健脾胃和补益肾精的角度考虑。
 
 此外中医的部位划分也是一个重要的特色内容，详细的部位划分放在后面的章节介绍。
 
