--- a/ok/bc/bc09-0.1.10.0.0.md
+++ b/ok/bc/bc09-0.1.10.0.0.md
@@ -8,6 +8,6 @@
 
 【临证应用】 琥珀用于惊风癫痫，常与朱砂、全蝎等息风镇痉药同用，以加强疗效。治心神不安、惊悸健忘、失眠多梦，常与朱砂、远志、菖蒲等配伍，如琥珀定志丸。用于瘀血阻滞之证，常与其它活血祛瘀药同用，如治瘀阻经闭、外伤瘀肿疼痛，常与当归、莪术等同用，如琥珀散。用于阴褒及妇女阴唇血肿或子宫瘀血，可单用研末冲服，效很好。若与三七为末服，对于现代医学之“冠心病”，有通行血脉、止痛之效。用于淋病、小便不利，单用有效。如《直指方》治小便尿血，单用为散，灯芯汤下；若用葱白煎汤冲服，可治沙、石诸淋，亦可与金钱草、海金砂、木通等利尿通淋药配伍，以治热淋、血淋等有显效。
 
-琥珀与茯苓，均有安神利尿之功，但琥珀入心肝血分而化瘀，茯苓人脾肺气分而化湿。琥珀多用于心失涵养之心悸不宁，茯苓多用于水气凌心之心悸不宁。	
+琥珀与茯苓，均有安神利尿之功，但琥珀入心肝血分而化瘀，茯苓入脾肺气分而化湿。琥珀多用于心失涵养之心悸不宁，茯苓多用于水气凌心之心悸不宁。	
 
 【用量用法】1—3克，研末为散冲服，不人煎剂。
