--- a/ok/bc/bc09-0.1.3.0.0.md
+++ b/ok/bc/bc09-0.1.3.0.0.md
@@ -6,6 +6,6 @@
 
 龙骨味甘、涩、性微寒，质重。主入心、肝、肾三经。重可镇惊潜阳，涩可收敛固脱。用于心悸、失眠、多梦、健忘、癫狂等证，有重镇安神之功；用于阴虚阳亢之头晕目眩、烦躁易怒等证，有平肝潜阳之效；用于遗精滑精，自汗盗汗，崩漏带下之证，有收敛固脱之能；外用还有生肌敛疮作用，可用于疮疡溃后久不愈合及湿疮流水，金疮出血等证。
 
-【临证应用】龙骨用于神志不安、心悸健忘、失眠多梦及惊痫癫狂等病征，常配龟板、远志、石菖蒲等，如枕中；用于阴虚阳亢、虚阳上越所致的烦躁易怒、头晕目眩之证，多与牡蛎、白芍、代赭石等配伍，如镇肝熄风汤；用于肾虚遗精滑精，常与牡蛎、沙苑蒺藜、莲须等同用；用于自汗盗汗，配牡蛎、海螵峭、山药等；用于妇女崩漏，赤白带下，多与牡蛎、五味子筹配伍；若大汗亡阳，则应与附子、人参等同用以回阳救逆，补气固脱。与枯矾研末外用可治疮溃久不愈合，湿疮湿疹流水不止及外伤出血等。
+【临证应用】龙骨用于神志不安、心悸健忘、失眠多梦及惊痫癫狂等病征，常配龟板、远志、石菖蒲等，如枕中丹；用于阴虚阳亢、虚阳上越所致的烦躁易怒、头晕目眩之证，多与牡蛎、白芍、代赭石等配伍，如镇肝熄风汤；用于肾虚遗精滑精，常与牡蛎、沙苑蒺藜、莲须等同用；用于自汗盗汗，配牡蛎、海螵峭、山药等；用于妇女崩漏，赤白带下，多与牡蛎、五味子筹配伍；若大汗亡阳，则应与附子、人参等同用以回阳救逆，补气固脱。与枯矾研末外用可治疮溃久不愈合，湿疮湿疹流水不止及外伤出血等。
 
 【用量用法】15—30克，入汤剂宜先煎。外用适量。镇惊潜阳宜生用，收敛固涩宜煅用。因具收敛之性，故湿热之证不宜服用。
