--- a/ok/fjx/fjx03-0.2.0.0.0.md
+++ b/ok/fjx/fjx03-0.2.0.0.0.md
@@ -20,7 +20,7 @@
 
 大陷胸汤对于急性水肿性胰腺炎、急性肠梗阻，都有较好的疗效。
 
-〔文献摘录〕张秉成：“洽太阳表邪不解，而反下之，热陷于里。其人表有水饮停胸，以致水热互结心下，满而硬啊，手不可近，不大便，舌上燥而渴，成结胸胃实之证。以甘遂之行水直达所结之处，而破其澼囊，大黄荡涤邪热，芒硝咸润软坚，三者皆峻下之品，非表邪尽除，内有水热互结者，不可用之。”（《成方便读》）
+〔文献摘录〕张秉成：“洽太阳表邪不解，而反下之，热陷于里。其人表有水饮停胸，以致水热互结心下，满而硬痛，手不可近，不大便，舌上燥而渴，成结胸胃实之证。以甘遂之行水直达所结之处，而破其澼囊，大黄荡涤邪热，芒硝咸润软坚，三者皆峻下之品，非表邪尽除，内有水热互结者，不可用之。”（《成方便读》）
 
 复习思考题
 
