--- a/ok/qs/qs03_18.md
+++ b/ok/qs/qs03_18.md
@@ -104,7 +104,7 @@
 
 本方由麦门冬、半夏、人参、甘草、大枣、粳米等六味药组成，功能生津、降逆，主治咳唾涎沫，咽干，口燥，气短而喘之肺瘘。
 
-原方去梗米，加山药、芍药、丹皮、桃仁名加减麦门冬汤，主治妇女倒经，经期吐血、衄血等症。
+原方去粳米，加山药、芍药、丹皮、桃仁名加减麦门冬汤，主治妇女倒经，经期吐血、衄血等症。
 
 **12.增液汤**
 
