--- a/ok/ya/ya06-0.39.0.0.0.md
+++ b/ok/ya/ya06-0.39.0.0.0.md
@@ -4,7 +4,7 @@
 
 患者以上腹部疼痛，发冷发烧3天，身目俱黄2天之主诉，于1959年9月2日入院。入院后检查诊断为慢性胆石症性胆囊炎急性发作，坏死性胆囊炎合并中毒性休克，经用抗感染及对症处理，病情未缓解，急请米老治疗。症见神志模糊，多语不清，烦躁不安，面色青黄，口唇发青，身目俱黄，皮肤见有出血点，白睛见有出血斑，伴寒慄鼓颔，壮热汗多，恶心呕吐，腹稍胀，大便呈灰白色，小便茶黄色，舌绛带紫，苔黑厚而燥，脉沉弱数。病为急黄夹斑，证属热毒炽盛，血分热灼，胆道阻滞。治宜清热解毒，凉血利胆。
 
-处方：生地30克 丹皮15克 杭芍15克 [犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)9克（先煎） [知母](https://www.gmzyjc.com/read/bc/bc03-0.1.2.0.0.md)9克 生[石膏](https://www.gmzyjc.com/read/bc/bc03-0.1.1.0.0.md)60克 梗米15克 炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)9克 [黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)9克 炒[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)9克 炒[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)9克 焦山栀12克 炒[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)9克 生[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)9克 每日一剂。
+处方：生地30克 丹皮15克 杭芍15克 [犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)9克（先煎） [知母](https://www.gmzyjc.com/read/bc/bc03-0.1.2.0.0.md)9克 生[石膏](https://www.gmzyjc.com/read/bc/bc03-0.1.1.0.0.md)60克 粳米15克 炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)9克 [黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)9克 炒[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)9克 炒[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)9克 焦山栀12克 炒[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)9克 生[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)9克 每日一剂。
 
 服7剂后，体温、血压正常，皮肤出血点消失，白睛出血斑大部分吸收，身目黄染减退，下肢轻度水肿，舌红绛，苔黄，脉细数。原方去[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)、加[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)15克。服2剂后，身目黄染减轻，白睛出血斑继见吸收，下肢稍浮肿，舌红、苔黄，脉细数。证为肝肾不足，湿热未清，治宜补益肝肾，继清湿热。
 
