--- a/ok/fjx/fjx07-0.7.0.0.0.md
+++ b/ok/fjx/fjx07-0.7.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔服法〕上为末，每服一、二钱（3～6克），水一盏，煎至六分，食后温服（现代用法：作汤剂，水煎服，阿胶加开水炖化，分次调入药汁）。
 
-〔讲解〕本方原名为阿胶散，一名补肺散。主治肺虚火旺的咳嗽气喘证或因久咳伤肺，肺络受损而成的咳血证。本病由于阴虚而感受外邪，久而久之，邪郁化热，灼伤肺阴，乃致肺阴更虚，所以，本病以肺阴虚为主要矛盾。故治宜养阴补肺为主，兼以镇咳止血。方中重用阿胶滋阴补肺，养血止血为君药，补液则津生，液充则火降，火降则嗽止。用牛蒡子以疏散风热，宣肺滑痰，清利咽膈；马兜铃清热化痰止咳共为臣药。佐以杏仁温润降气定喘，使其热清气降而肺自安宁。土为金之毋，更加梗米、甘草以益脾胃，培土生金，增加阿胶补肺之功，为佐使药。诸药合用，使脾肺得养，母子兼顾，嗽宁血止。
+〔讲解〕本方原名为阿胶散，一名补肺散。主治肺虚火旺的咳嗽气喘证或因久咳伤肺，肺络受损而成的咳血证。本病由于阴虚而感受外邪，久而久之，邪郁化热，灼伤肺阴，乃致肺阴更虚，所以，本病以肺阴虚为主要矛盾。故治宜养阴补肺为主，兼以镇咳止血。方中重用阿胶滋阴补肺，养血止血为君药，补液则津生，液充则火降，火降则嗽止。用牛蒡子以疏散风热，宣肺滑痰，清利咽膈；马兜铃清热化痰止咳共为臣药。佐以杏仁温润降气定喘，使其热清气降而肺自安宁。土为金之毋，更加粳米、甘草以益脾胃，培土生金，增加阿胶补肺之功，为佐使药。诸药合用，使脾肺得养，母子兼顾，嗽宁血止。
 
 本方对大人小儿，俱可通用。如肺虚无火或外有表寒，内有痰浊者，不宜使用本方。
 
