--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -61,7 +61,7 @@
 
 但是能够完全达到光明中医的学习要求是很不容易的，需要能静下心来认真学习。我们见过很多学习者开始的时候信心满满，学习一段时间后就嫌过程枯燥，最终半途而废。
 
-为了尽量让学员用最短的时间打好中医基础，网校提取了最主要的7门课程放在学习平台（https://zuoye.gmzy.org.cn）上，供学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为基础的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关，达到中医真正入门的水平。在光明中医的教学要求里，这些课程已经是最基础、最低的要求了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
+为了尽量让学员用最短的时间打好中医基础，网校提取了最主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为基础的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关，达到中医真正入门的水平。在光明中医的教学要求里，这些课程已经是最基础、最低的要求了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
 
 现在中医式微，很多光明老学员担心中医的传承问题，是愿意带学生的，关键问题在于符合要求的学生难找。现在的中医学习者大多没有系统学习的经历，中医基础非常差，很难带。如果能系统学完经典，相信有很多老中医会愿意收入门下的。
 
