--- a/ok/fjx/fjx07-0.7.0.0.0.md
+++ b/ok/fjx/fjx07-0.7.0.0.0.md
@@ -1,6 +1,6 @@
 ## 补肺阿胶汤（原名阿胶散，又名补肺散）《小儿药证直诀》
 
-〔组成〕阿胶一两五钱，麸炒，微捣碎，用糯米粉拌炒为胶珠（45克） 鼠粘子〈即牛蒡子）炒香，二钱五分（7.5克） 甘草（炙),二钱五分（7.5克） 马兜铃五钱，焙（15克） 杏仁七个去皮尖，炒（6克） 糯米一两，炒（30克）
+〔组成〕阿胶一两五钱，麸炒，微捣碎，用糯米粉拌炒为胶珠（45克） 鼠粘子(即牛蒡子）炒香，二钱五分（7.5克） 甘草（炙),二钱五分（7.5克） 马兜铃五钱，焙（15克） 杏仁七个去皮尖，炒（6克） 糯米一两，炒（30克）
 
 〔服法〕上为末，每服一、二钱（3～6克），水一盏，煎至六分，食后温服（现代用法：作汤剂，水煎服，阿胶加开水炖化，分次调入药汁）。
 
