--- a/ok/bc/bc03-0.4.3.0.0.md
+++ b/ok/bc/bc03-0.4.3.0.0.md
@@ -1,7 +1,7 @@
 ### 薄公英
 
 **〔原文〕甘平。花黄属土**，**入太阴阳明**。脾、胃。**化热毒，解食毒，消肿核，专治乳痈**乳头属厥阴，乳
-房属阳明。同忍冬煎，少入酒服，捣敷亦良。**疔毒**（1）。**亦为通淋**（2）**妙品**。诸家不言治淋，试之甚验。**擦牙乌髭发**，《瑞竹堂》有还少丹，方取其通肾。东垣曰：苦寒肾经君药。**白汁涂恶刺**。凡螳螂诸虫，盛夏孕育，游诸物上，必遗精汁，干久则有毒。人手触之成疾，名狐尿刺，惨痛不眠，百疗难效，取汁厚涂即愈，千金方极言其功。 **叶如萵苣，花如单瓣菊花，四时有花，花罢飞絮。断之茎中有白汁**。郑方升曰：一茎两花，高尺许者，掘下数尺，根大如拳，旁有人形拱抱，捣汁酒服，治噎膈如祌。
+房属阳明。同忍冬煎，少入酒服，捣敷亦良。**疔毒**（1）。**亦为通淋**（2）**妙品**。诸家不言治淋，试之甚验。**擦牙乌髭发**，《瑞竹堂》有还少丹，方取其通肾。东垣曰：苦寒肾经君药。**白汁涂恶刺**。凡螳螂诸虫，盛夏孕育，游诸物上，必遗精汁，干久则有毒。人手触之成疾，名狐尿刺，惨痛不眠，百疗难效，取汁厚涂即愈，千金方极言其功。 **叶如萵苣，花如单瓣菊花，四时有花，花罢飞絮。断之茎中有白汁**。郑方升曰：一茎两花，高尺许者，掘下数尺，根大如拳，旁有人形拱抱，捣汁酒服，治噎膈如神。
 
 【讲解】（1）疔毒：疔疮之重者。疔疮为外科常见病，以其坚硬根深，形如钉状，故名。（2）通淋：为治疗尿急、短、赤、涩、痛，淋沥不断之淋证的一种方法。
 
