--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -98,19 +98,15 @@
 
 所以说“虚则补之，实则泻之”。总的来说，补虚叫做扶正，泻实叫做祛邪。所以说中医的治法无非扶正祛邪而已。
 
-#### 小结
+#### 虚实共存：
 
-保持指标平衡的能力不足称为虚。原则上，维持指标平衡的能力越强越好。比如城市楼房与农村平房相比较，楼房维持平衡的能力强，遇到狂风、暴雨、寒潮的时候，楼房更具有抵御这些外邪的能力，所以人们更喜欢住楼房。对于人来讲，健康的人抵御外界风、寒、暑、湿的能力强，也就是维持自身平衡的能力强大。反之，不健康的人维持平衡的能力弱，稍受干扰就有疾病发生。
+因**虚**指正气不足，**实**指邪气过多，所以同一个部位**虚实**两者并不对立，可以共存；不同部位则可以此处**虚**而彼处**实**。一般来说，单纯的正气虚或者邪气实往往只是疾病的初起阶段，病因单一，治疗相对简单。慢性病、老年病、严重疾病往往是正气虚与邪气实共存，既有一个部位的虚实共存，也有不同部位的此虚彼实等等。解决这种问题要分清主次，确定先补还是先泻，或者重补轻泻、轻补重泻、补此泻彼等等。
 
-不该有的干扰平衡的因素叫邪实。原则上最好没有，如果有的话要控制在一个可接受的范围内，不要超过人的调节平衡能力，超过则发病。
+#### 错误的调节：
 
-这里要注意的是，一定分清虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
+一定要注意，必须分清虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
 
-所以一定不能让虚的更虚、实的更实，不能犯虚虚实实的错误，这是中医需要遵循的最基本原则。很多不愿意系统学习的中医爱好者，在不能全面把握人体虚实状态的情况下，片面用药，造成严重后果的例子非常常见，大家要引以为戒！
-
-另外，在扶正祛邪过程中，扶正的方法往往会有留邪的隐患，祛邪的方法往往会伤正。所以无论是扶正还是祛邪，都要注意对应的负面作用。
-
-因虚指正气不足，实指邪气过多，所以虚实两者并不对立，可以共存。单纯的正气虚或者邪气实往往只是疾病的初起阶段，病因单一，治疗相对简单。慢性病、老年病、严重疾病往往是正气虚与邪气实共存。解决这种问题要分清主次，确定先补还是先泻，或者重补轻泻、轻补重泻等等。
+所以一定不能让虚的更虚（虚虚）、实的更实（实实），不能犯虚虚实实的错误，这是中医需要遵循的最基本原则。因扶正的方法可能会有留邪的隐患，祛邪的方法往往会伤正。所以无论是扶正还是祛邪，都要注意对应的负面作用。
 
 > **无盛盛，无虚虚，而遗人天殃，无致邪，无失正，绝人长命**
 >
@@ -131,6 +127,20 @@
 > 五脏脉已绝于内者，肾肝气已绝于内也，而医反补其心肺；五脏脉已绝于外者，心肺气已绝于外也，而医反补其肾肝。阳绝补阴，阴绝补阳，是谓**实实虚虚，损不足而益有余。如此死者，医杀之耳**。
 >
 > 《难经-十二难》
+
+很多不愿意系统学习的中医爱好者，不识药性，不懂辩证，在不能全面把握人体虚实状态的情况下，往往只看见到一方面之虚，看不到其它方面的实，进而片面用药，犯虚虚实实之戒，造成严重后果的例子非常常见。
+
+我们的老校长、中医司令吕炳奎前辈曾明确说过，反对社会上宣称可以短期速成的中医培训班。这种培训班制造了大量似懂非懂的半成品中医。这种中医治病效果先不论，因其知识不全面，常犯虚虚实实之戒，给病人造成更大的伤害，败坏了中医的声誉。大家要引以为戒！
+
+> 暮世之病也，则不然，治不本四时，不知日月，不审逆从，病形已成，乃欲微针其外，汤液治其内，**粗工凶凶，以为可攻，故病未已，新病复起**。
+>
+> 《素问-移精变气论篇》
+
+#### 小结
+
+保持指标平衡的能力不足称为虚。原则上，维持指标平衡的能力越强越好。比如城市楼房与农村平房相比较，楼房维持平衡的能力强，遇到狂风、暴雨、寒潮的时候，楼房更具有抵御这些外邪的能力，所以人们更喜欢住楼房。对于人来讲，健康的人抵御外界风、寒、暑、湿的能力强，也就是维持自身平衡的能力强大。反之，不健康的人维持平衡的能力弱，稍受干扰就有疾病发生。
+
+不该有的干扰平衡的因素叫邪实。原则上最好没有，如果有的话要控制在一个可接受的范围内，不要超过人的调节平衡能力，超过则发病。
 
 ### 1.3、平衡的控制：
 
