--- a/ok/qs/qs03_01.md
+++ b/ok/qs/qs03_01.md
@@ -186,7 +186,7 @@
 
 **芩芍红花牛蒡子，  伤寒邪结耳下痛。**
 
-**时行**  亦称天行， 时气。指流行病。廪1ǐn， 读凛，米仓。
+**时行**  亦称天行， 时气。指流行病。廪lǐn， 读凛，米仓。
 
 败毒散又名人参败毒散。由人参、茯苓、甘草、枳壳、桔梗、柴胡、前胡、羌活、独活、川芎、薄荷、生姜等十二味药组成。功能发汗解表，散风祛湿。主治时行病，憎寒壮热、肢体酸痛、无汗鼻塞等症。
 
