--- a/ok/bc/bc03-0.3.5.0.0.md
+++ b/ok/bc/bc03-0.3.5.0.0.md
@@ -2,7 +2,7 @@
 
 **〔原文〕辛甘微寒。入手足少阴**心，肾。**厥阴**。心包、肝。**泻血中伏火**，色丹故入血分。时珍曰：伏火即阴火也，阴火即相火也。世入专以黄柏治相火，不知丹皮之功更胜，故仲景肾气丸用之。**和血凉血而生血**，血热则枯，凉则生，**破积血**，积瘀不去则新血不生。**通经脉，为吐衄必用之药** 。血属阴本静，因相火所逼，故越出上窍。**治中风五劳**（1），**惊痫**（2）**瘛疭**。筋脉伸缩抽掣为瘛疭，或手足抽掣，口眼㖞斜，卒然眩仆，吐涎身软，时发时止为痫。皆阴虚血热，风火相搏，痰随火涌所致。**除烦热，疗痈疮**，凉血。**下胞胎，退无汗之骨蒸**。张元素曰：丹皮治无汗之骨蒸，地骨皮治有汗之骨蒸。神不足者手少阴，志不足者足少阴，故仲景肾气丸用丹皮，治神志不足也。按《内经》曰：水之精为志，故肾藏志；火之精为神，故心藏神。**单瓣花红者入药，肉厚者佳。酒拌蒸用。畏贝母、菟丝、大黄，忌蒜、胡荽，伏砒**。时珍曰：花白者补，赤者利，人所罕悟，宜分别之。
 
-【讲解】（1）五劳：指肺劳、肝劳、心.、脾劳、肾劳五种虚劳证。 （2）惊痫：泛指惊风、痫证各种病证。
+【讲解】（1）五劳：指肺劳、肝劳、心劳、脾劳、肾劳五种虚劳证。 （2）惊痫：泛指惊风、痫证各种病证。
 
  **牡丹皮功专凉血散瘀，且具有凉血而不留瘀，活血而不妄行的特点**。为毛茛科多年生落叶小灌木植物牡丹的根皮。药材以条壮皮厚粉性足者为佳。生用者，系原药材去外皮及木心，能净切片晒干用。简称丹皮。炒用者，可减轻寒凉辛散之性；或以酒炒，以加强辛散化瘀作用。
 
