--- a/ok/bc/bc03-0.2.3.0.0.md
+++ b/ok/bc/bc03-0.2.3.0.0.md
@@ -7,7 +7,7 @@
 
 【讲解】**黄柏长于泻肾之相火，清下焦湿热**。为芸香科落叶乔木植物黄柏（关黄柏）和黄皮树（川黄柏）除去栓皮的树皮。关黄柏主产于辽宁、吉林、河北等地，以辽宁产量最大；川黄柏主产于四川、贵州、湖北、云南等地，以四川、贵州产量最大。气微味苦，嚼之有粘性，能使水染成黄色，以片张厚大，鲜黄色，无栓皮者为佳。切片，生用或盐水炒用。
 
-本品苦寒沉降，主入肾与膀胱，兼入大肠经。苦能燥，寒清热，其泻火、燥湿之功与黄连相似，但偏于下焦，以泻肾之相火，清下焦湿热为其主要作用。故凡阴虚火旺，骨蒸盗汗和遗精，以及湿热蕴结所致的泻痢、肠风下血、黄疸、淋浊、带下、足膝肿痛，及疮疡肿毒、湿疹等证，皆为要药。其退虚热、治骨蒸，是取其以泻为补之意，使火去而不复伤阴，并非其具有滋阴作用。生用降火力大，盐水炒可增强人肾泻火之功。
+本品苦寒沉降，主入肾与膀胱，兼入大肠经。苦能燥，寒清热，其泻火、燥湿之功与黄连相似，但偏于下焦，以泻肾之相火，清下焦湿热为其主要作用。故凡阴虚火旺，骨蒸盗汗和遗精，以及湿热蕴结所致的泻痢、肠风下血、黄疸、淋浊、带下、足膝肿痛，及疮疡肿毒、湿疹等证，皆为要药。其退虚热、治骨蒸，是取其以泻为补之意，使火去而不复伤阴，并非其具有滋阴作用。生用降火力大，盐水炒可增强入肾泻火之功。
 
 【临证应用】黄柏用于阴虚发热，盗汗遗精等证，常与知母相须为用，并与地黄、龟板等养阴药配伍，以滋肾阴，泻相火，退虚热，如知柏地黄丸，大补阴丸；用于痢疾，常与白头翁、黄连等相配伍，如白头翁汤；治湿热黄疸，可配栀子、甘草等，即栀子柏皮汤；治妇人湿热带下，秽浊黄稠，多配车前子、白果等，如易黄汤；治湿热下注所致的足膝肿痛，常与苍术、牛膝、苡仁等同用，如四妙丸。若与清热利尿通淋药木通、车前子、竹叶等同用，可治热淋、小便热赤涩痛之证。	
 
