--- a/ok/bc/bc03-0.2.3.0.0.md
+++ b/ok/bc/bc03-0.2.3.0.0.md
@@ -2,8 +2,7 @@
 
 **〔原文〕苦寒微辛，沉阴下降。泻膀胱相火**，足太阳引经药。**补肾水不足，坚肾润燥**，《发明》曰：非真能补
 也，肾苦燥，急食辛以润之；肾欲坚，急食苦以坚之也，相火退而肾固，则无狂荡之患矣，按肾本属水，虚则热矣，心本属火，虚则寒矣。**除湿清热，疗下焦虚，骨蒸劳热**，阴虚生内热。**诸痿瘫痪**，热胜则伤血，血不荣筋,则软短而为拘；湿胜则伤筋，筋不束骨，则弛长而为痿。合苍术名二妙散，清热利湿，为治痿要药。或兼气虚血虚，脾虚肾虚，湿痰死血者，当随证加治。**目赤耳鸣**，肾火。**消渴便闭，黄疸水肿**，王善夫病便闭，腹坚如石，腿裂出水，饮食不下，治以利小便药，遍服不效。东垣曰：此奉养太过，膏粱积热，损伤肾水，致膀胱干涸，小便不化，
-火又逆上，而为呕哕。《难经》所谓关则不得小便，格则吐逆者。《内经》所谓，无阴则阳无以化也。遂处以北方大苦寒之剂，黄柏、知母各一两，酒洗焙研，桂一钱为引，名滋皆丸，每服二百丸，未几，前阴如刀刺火烧，溺
-出床下成流，肿胀遂消。**水泻热痢，痔血肠风，漏下赤白**，皆湿热为病。**诸疮痛痒**，**头疮**研末敷之。**口疮**，蜜炒研含。凡口疮用凉药不效者，乃中气不足，虚火上炎，宜用反治之法，参术甘草补土之虚，干姜散火之标，甚者加附子，或噙官桂，引火归元。**杀虫安蚘。 久服伤胃，尺脉弱者禁用**。若虚火上炎，服此苦寒之剂，有寒中之变。时珍曰：知母佐黄柏，滋阴降火，有金水相生之义。古云黄柏无知母，犹水母之无虾也。盖黄柏能制命门膀胱阴中之火，知母能清肺金滋肾水之化源。丹溪曰：君火者，人火也，心火也，可以水灭，可以直折，黄连之属可以制之；相火者，天火也，龙雷之火也，阴火也，不可以水湿制之，当从其性而伏之，惟黄柏之属可以降之。按火有虚火、实火、燥火、湿火、郁火、相火之异。虚火宜补，实火宜泻，燥火宜滋润，郁火宜升发。湿火由湿郁为热，多病腑肿，经所谓诸腹胀大，皆属于热，诸病腑肿，皆属于火是也。宜利湿清热而兼补脾。相火寄于肝肾，乃龙雷之火，非苦寒所能胜，宜滋阴养血，壮水之主，以制阳光。又按诸病之中，火证为多，有本经自病者，如忿怒生肝火，焦思生心火之类是也；有子母相克者，如心火克肺金，肝木克脾土之类是也；有脏腑相移者，如肺火咳嗽，久则移热于大肠而泄泻，心火烦焦，久则移热于小肠，而为淋闭之类是也。又有别经相移者，有数经合病者，当从其重者而治之。**川产肉厚色深者良。生用降实火，蜜炙则不伤胃，炒黑能止崩带，酒制治上，蜜制治中，盐制治下**。又末乳调，能涂冻疮。
+火又逆上，而为呕哕。《难经》所谓关则不得小便，格则吐逆者。《内经》所谓，无阴则阳无以化也。遂处以北方大苦寒之剂，黄柏、知母各一两，酒洗焙研，桂一钱为引，名滋肾丸，每服二百丸，未几，前阴如刀刺火烧，溺出床下成流，肿胀遂消。**水泻热痢，痔血肠风，漏下赤白**，皆湿热为病。**诸疮痛痒**，**头疮**研末敷之。**口疮**，蜜炒研含。凡口疮用凉药不效者，乃中气不足，虚火上炎，宜用反治之法，参术甘草补土之虚，干姜散火之标，甚者加附子，或噙官桂，引火归元。**杀虫安蚘。 久服伤胃，尺脉弱者禁用**。若虚火上炎，服此苦寒之剂，有寒中之变。时珍曰：知母佐黄柏，滋阴降火，有金水相生之义。古云黄柏无知母，犹水母之无虾也。盖黄柏能制命门膀胱阴中之火，知母能清肺金滋肾水之化源。丹溪曰：君火者，人火也，心火也，可以水灭，可以直折，黄连之属可以制之；相火者，天火也，龙雷之火也，阴火也，不可以水湿制之，当从其性而伏之，惟黄柏之属可以降之。按火有虚火、实火、燥火、湿火、郁火、相火之异。虚火宜补，实火宜泻，燥火宜滋润，郁火宜升发。湿火由湿郁为热，多病腑肿，经所谓诸腹胀大，皆属于热，诸病腑肿，皆属于火是也。宜利湿清热而兼补脾。相火寄于肝肾，乃龙雷之火，非苦寒所能胜，宜滋阴养血，壮水之主，以制阳光。又按诸病之中，火证为多，有本经自病者，如忿怒生肝火，焦思生心火之类是也；有子母相克者，如心火克肺金，肝木克脾土之类是也；有脏腑相移者，如肺火咳嗽，久则移热于大肠而泄泻，心火烦焦，久则移热于小肠，而为淋闭之类是也。又有别经相移者，有数经合病者，当从其重者而治之。**川产肉厚色深者良。生用降实火，蜜炙则不伤胃，炒黑能止崩带，酒制治上，蜜制治中，盐制治下**。又末乳调，能涂冻疮。
 
 【讲解】**黄柏长于泻肾之相火，清下焦湿热**。为芸香科落叶乔木植物黄柏（关黄柏）和黄皮树（川黄柏）除去栓皮的树皮。关黄柏主产于辽宁、吉林、河北等地，以辽宁产量最大；川黄柏主产于四川、贵州、湖北、云南等地，以四川、贵州产量最大。气微味苦，嚼之有粘性，能使水染成黄色，以片张厚大，鲜黄色，无栓皮者为佳。切片，生用或盐水炒用。
 
