--- a/ok/gl/gl05-0.4.1.0.0.md
+++ b/ok/gl/gl05-0.4.1.0.0.md
@@ -218,4 +218,4 @@
 
 既然脉与证有相应与不相应的情况，其中必有一真一假，故临床中应仔细辨别其真假，以决定从舍。或舍证从脉，或舍脉从证。如：腹胀满而脉弱，说明是脾胃气虚而气滞于中，胀满是假实，而脉弱是真虚之象，应舍证从脉。再如：温病中津气大伤，一派虚象而脉来浮洪，说明是阳气浮越之象，脉虽洪而按之必空软无力，证之虚是真，脉之洪是假，应舍脉从证。
 
-脉有从舍，说明脉象只是病变临床表现的一个方面，因而不能把脉诊做为唯一的诊断依据，心须四诊合参，才能做出正确诊断。
+脉有从舍，说明脉象只是病变临床表现的一个方面，因而不能把脉诊做为唯一的诊断依据，必须四诊合参，才能做出正确诊断。
