--- a/ok/qs/qs03_01.md
+++ b/ok/qs/qs03_01.md
@@ -150,7 +150,7 @@
 
 **除去细辛加炙草， 少阴反热亦能康。**
 
-本力由麻黄、附子、细辛三味药组成，功能温经发表。治少阴病初起发热，脉沉。少阴病本不发热、初起反发热，可知兼有表证。
+本方由麻黄、附子、细辛三味药组成，功能温经发表。治少阴病初起发热，脉沉。少阴病本不发热、初起反发热，可知兼有表证。
 
 本方去细辛加炙甘草，名麻黄附子甘草汤，也能治少阴病反发热。但本方较前方作用缓和。
 
