--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -436,6 +436,10 @@
 
 天气、地气虽然受太阳能量的影响最大，但是也受其它因素的影响。比如太阳系五大行星，每年地球与五大行星的距离发生变化，各个行星对地球天气、地气也有一定程度的扰动。这种扰动可以造成一些非时之气的产生，进而影响地球生物的健康状态。好在这种扰动的程度不算太大，如果是非常健康的人，其保持平衡能力强，受影响就不大。而对于不健康的人，如果是虚证，其维持平衡的能力差，轻微的扰动即可以让其失衡发病；如果是实证，已经处于某方面失衡的临界点，在同类型扰动的加强下，也可能发病。
 
+> 气相胜者和，不相胜者病；重感于邪则甚也。
+>
+> 《素问-气交变大论》
+
 > 如《素问•气交变大论》所说：“岁木太过，风气流行，脾土受邪。民病飧泄食减，体重烦冤，肠鸣腹支满。甚则忽忽善怒，眩冒巅疾。……反胁痛而吐甚。”
 >
 > 《黄帝内经讲解-运气学说-六气的常变》
@@ -494,11 +498,11 @@
 
 内经讲“地气上为云，天气下为雨；雨出地气，云出天气。”  这明显是自然界的对流。
 
-在天地这个循环系统中，地表的物质受阳光照射后，形成比较活跃的地气；地气受热上升，离开地面成为天气，天气越向上越冷，升到一定程度后，受寒下降，落于地面，又回归为地气。通过这种升、浮、降、沉的循环运动，天地之间互相进行了物质上的交互，让气交之地的湿度趋于平衡。
+在天地这个循环系统中，地表的物质受阳光照射后，形成比较活跃的地气；地气受热上升，离开地面成为天气，天气越向上越冷，升到一定程度后，受寒下降，落于地面，又回归为地气。通过这种升、浮、降、沉的循环运动，天地之间进行了物质上的交互，让气交之地的温度、湿度趋于平衡。
 
 比如海水为液态，受热成为水蒸气上升到天空形成云，天空为阳，天空的云就可以理解为**阳中之阴**。
 
-空气漂浮在空中为气态，但其可以溶于水或者存在于疏松的土壤中。因地面水土为阴，其中所含的空气就可以理解为**阴中之阳**。土壤中的空气含有的氮、氧等元素对植物的生长有很好的作用。农民种地的时候需要松土，有利于植物的根接触空气；养鱼的时候，需要向池塘中加气增加水的含氧量，也有利于鱼类的生长。
+空气存在于空中为气态，但其可以溶于水或者存在于疏松的土壤中。因地面水土为阴，其中所含的空气就可以理解为**阴中之阳**。土壤中的空气含有的氮、氧等元素对植物的生长有很好的作用。农民种地的时候需要松土，有利于植物的根接触空气；养鱼的时候，需要向池塘中加气增加水的含氧量，也有利于鱼类的生长。
 
 这样，地面的水升到天空，滋润了空气；天空的空气下降到大地，肥沃了土壤。这就是中医中的阴中有阳、阳中有阴、阴阳互根的道理。
 
@@ -514,7 +518,7 @@
 
 > 自然界大气的运动，是天地阴阳二气相互作用的结果。天之阳气具有温暖、发散的特性，地之阴气具有寒冷、凝结的特性，这两种属性不同的气，常常相互作用，相互影响，因而引起大气不断上升下降的运动。《内经》曾举云雨的变化为例来说明这一问题，比如地面的水，由于天空（太阳）热力的蒸发，可以化气上升而为云，所谓“地气上为云”，“云出天气”；天空的云，遇到寒冷的阴气，便会凝结下降而为雨，所谓“天气下为雨”，“雨出地气”。可以看出天地阴阳之气在不断地进行上升下降的运动。
 >
-> （3）*天气下降*，气就下流于大地；地气上升，气就上腾于天空。天气属阳，下流于地后便转化为阴；地气属阴，上腾于天后便转化为阳。这就形成了天地阴阳之气的相互转化。
+> （3）天气下降，气就下流于大地；地气上升，气就上腾于天空。天气属阳，下流于地后便转化为阴；地气属阴，上腾于天后便转化为阳。这就形成了天地阴阳之气的相互转化。
 >
 > 《黄帝内经讲解-阴阳五行学说-（十四）天地阴阳之气的升降转化》
 
