--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -110,7 +110,19 @@
 >
 > 《黄帝内经讲解-藏象- 三焦的部位和功用》
 
-#### 1.4、元气波动与分布差异
+#### 1.4 元气的失衡
+
+肾中元气补充脏腑及形体的元气，其释放的量应在平衡范围之内，不多不少；其分配应该上、下、里、外均衡。
+
+如果释放过少，则脏腑、形体的元气皆不够，会出现整体阳虚的情况，表现为畏寒怕冷、肢体不温等情况，用补阳类方剂增加阳气的释放。
+
+如果释放过多则脏腑、形体的元气过量，会形成各种实热证，用清热泄火类方剂恢复平衡。
+
+如果元气未能正确分配，则一部分区域为热证，一部分区域为寒证，常见有上热下寒，里热外寒或者里寒外热等等。造成寒热错杂的原因很多，比如寒邪闭表、气郁、肾虚元气不藏、中焦淤堵、寒邪格阳、相火妄动等等，中医中的乌梅丸、黄连汤、干姜黄连黄芩人参汤、麻黄升麻汤、大青龙汤、引火汤、四逆汤、白通汤、白通加猪胆汁汤、通脉四逆汤、通脉四逆加猪胆汤、四逆散、知柏地黄丸、大补阴丸、封髓丹等等方剂各有治疗侧重点，以后学习遇到对应方剂的时候应系统整理。
+
+中医方剂虽多，但都是针对人体运转不同环节的失衡而制定的。熟悉中医理论，即可将方剂与理论衔接，运用自如。反之，如果不熟悉理论，只靠机械背诵症状与方剂的关系，则知其然而不知其所以然，难以变通，中医难以发扬光大。
+
+#### 1.5、元气波动与分布差异
 
 自然界阳气在不同的时间有强弱的波动，在不同的地域有强弱的差异。人体的元气也是如此。
 
