--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -271,11 +271,11 @@
 
 脏腑与形体是人体比较大的一对阴阳关系。两者比较而言，脏腑对外界进入人体的物质进行处理，转化为精气血并存储。这一过程以固液态物质为主，所以脏腑为阴，像地，以五行划分，即木、火、土、金、水；形体接受脏腑传输来的各种资源，进行使用消耗，这一过程以气态物质为主导，所以形体为阳，像天，以六气划分，也即前面天地章节所说的厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
 
-此外，脏腑和形体两者又有各自的天地之气。
+此外，内在脏腑和外在形体两者又有各自的天地之气。
 
-内在脏腑的天地之气中，地气主导天气，以固液态的形质地气为根本。而脏腑之间腑为阳，天气偏多，脏为阴，地气偏多，所以以五脏为重；
+脏腑的天地之气中，地气主导天气，以固液态的形质地气为根本。而脏腑之间腑为阳，天气偏多，脏为阴，地气偏多，所以以五脏为重；
 
-外在形体的天地之气中，天气主导地气。这是因为气态物质推动津血到达全身，以营养皮肉筋骨等组织，所以以六经天气为根本。
+形体的天地之气中，天气主导地气。这是因为气态物质推动津血到达全身，以营养皮肉筋骨等组织，所以以六经天气为根本。
 
 人体生病主要有外感病和内伤病。外感病是外界寒暑之气侵袭形体肌表，使其失衡并由外向内发展。内伤病是各种原因先造成脏腑失衡，并由内向外发展。
 
