--- a/ok/bc/bc18-0.0.2.0.0.md
+++ b/ok/bc/bc18-0.0.2.0.0.md
@@ -1,6 +1,6 @@
 ### 五味子
 
-**〔原文〕性温，五味俱备**，皮甘、肉酸，核中苦辛，都有咸味。**酸咸为多。专收敛肺气而滋肾水**；气为水母。经 曰：肺欲收，即食酸以收之。王好古曰：入手太阴血分，足少阴气分。**益气生津**，肺主气，敛故能益，益气故能生津。夏月宜常服，以泻火而益金。**补虚明目，强阴涩精**，仲景八味丸，加之补皆，盖内核似肾，象形之义。**退热敛汗，止呕住泻，宁嗽定喘**，感风寒而喘嗽者当表散，宜羌防苏桔；痰壅气逆而喘嗽者当清降，宜二陈及苏子降气汤；水气逆而喘嗽者，宜小青龙，半夏茯苓汤；气虚病久而喘嗽者，宜人参，五味。**除烦渴，消水肿，解酒毒，收耗散之气。瞳子散大，嗽初起，脉数有实火者忌用**。朱丹溪曰：五味收肺气，非除热乎？补肾非暖火脏乎？乃火热嗽必用之药。寇氏所谓食之多虚热者，收补之骤也。闵守泉每晨吞北五味三十粒，固精气，盎五脏。**北产紫黑者良。入滋补药蜜浸蒸，入劳嗽药生用， 俱槌碎核。南产色红而枯，若风寒在肺宜南者。苁蓉为使。恶萎蕤。熬膏良**。
+**〔原文〕性温，五味俱备**，皮甘、肉酸，核中苦辛，都有咸味。**酸咸为多。专收敛肺气而滋肾水**；气为水母。经 曰：肺欲收，即食酸以收之。王好古曰：入手太阴血分，足少阴气分。**益气生津**，肺主气，敛故能益，益气故能生津。夏月宜常服，以泻火而益金。**补虚明目，强阴涩精**，仲景八味丸，加之补肾，盖内核似肾，象形之义。**退热敛汗，止呕住泻，宁嗽定喘**，感风寒而喘嗽者当表散，宜羌防苏桔；痰壅气逆而喘嗽者当清降，宜二陈及苏子降气汤；水气逆而喘嗽者，宜小青龙，半夏茯苓汤；气虚病久而喘嗽者，宜人参，五味。**除烦渴，消水肿，解酒毒，收耗散之气。瞳子散大，嗽初起，脉数有实火者忌用**。朱丹溪曰：五味收肺气，非除热乎？补肾非暖火脏乎？乃火热嗽必用之药。寇氏所谓食之多虚热者，收补之骤也。闵守泉每晨吞北五味三十粒，固精气，盎五脏。**北产紫黑者良。入滋补药蜜浸蒸，入劳嗽药生用， 俱槌碎核。南产色红而枯，若风寒在肺宜南者。苁蓉为使。恶萎蕤。熬膏良**。
 
 【讲解】**五味子酸收之中又具滋益之性，功能敛肺滋肾， 生津止汗，涩精止泻，宁心安神**。系木兰科多年生藤木植物五味子和华中五味子的成熟果实。前者主产辽宁，吉林，河北等地，习称北五味子，为传统使用之正品；后者主产于西南和长江流域，习称南五味子,品质较北五味子为次。生用或经醋、蜜拌蒸，晒干用。
 
