--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -15,6 +15,8 @@
 >
 > 《黄帝内经讲解-寿夭与先后天的关系》
 
+形体变化一般延后于气血变化。气血失衡一段时间后，形体上会有可见的异常变化。气血恢复平衡一段时间后，异常的形体变化才会开始趋向正常。
+
 中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
 3、气血与精：
