--- a/ok/bc/bc18-0.0.20.0.0.md
+++ b/ok/bc/bc18-0.0.20.0.0.md
@@ -8,7 +8,7 @@
 
 本品味甘苦涩，性平，有小毒。入肺经。功专敛肺气，定喘止陔，并可减少痰量，用于喘咳、气逆、痰多之证甚效。又兼除湿与收涩两方面的作用，故又能止带，缩小便而治小便频数，以及白带白浊等证。但涩而壅气，外感咳嗽不宜用。
 
-【临证应用】白果用于哮喘痰嗽常与麻黄、甘草同用，如鸭掌散；治肺热痰喘气促者，则多与黄芩、桑白皮等同用，如定瑞汤。古方有白果、莲子、胡椒、乌骨鸡煮食，治下元虚衰、白带清稀者，现多与黄柏、芡实等同用，如易黄汤，治湿热带下色黄者。白果配萆薢、益智仁，又可治白浊。
+【临证应用】白果用于哮喘痰嗽常与麻黄、甘草同用，如鸭掌散；治肺热痰喘气促者，则多与黄芩、桑白皮等同用，如定喘汤。古方有白果、莲子、胡椒、乌骨鸡煮食，治下元虚衰、白带清稀者，现多与黄柏、芡实等同用，如易黄汤，治湿热带下色黄者。白果配萆薢、益智仁，又可治白浊。
 
 银杏叶，性味同白果。功能敛肺、平喘、止痛，用于肺虚咳喘及现代医学之高血脂、高血压、冠心病、心绞痛、脑血管痉挛等证。常用量3 — 6克。
 
